Update NEDOCS models.

--- a/gdl2/NEDOCS_score_for_emergency_department_overcrowding.v1.test.yml
+++ b/gdl2/NEDOCS_score_for_emergency_department_overcrowding.v1.test.yml
@@ -4,13 +4,13 @@ test_cases:
 - id: Not busy
   input:
     1:
-      gt0003|Number of ED beds: 60,1
-      gt0004|Number of hospital beds: 400,1
-      gt0005|Total patients in the ED: 2,1
-      gt0006|Patients on ventilators in the ED: 0,1
-      gt0007|Number of admits in the ED: 2,1
-      gt0008|Waiting time of longest admitted patient: 0,h
-      gt0009|Waiting time of longest waiting room patient: 0,h
+      gt0003|Number of ED beds: 60
+      gt0004|Number of hospital beds: 400
+      gt0005|Total patients in the ED: 2
+      gt0006|Patients on ventilators in the ED: 0
+      gt0007|Number of admits in the ED: 2
+      gt0008|Waiting time of longest admitted patient: "0,h"
+      gt0009|Waiting time of longest waiting room patient: "0,h"
   expected_output:
     1:
       gt0012|Level: local::at0003|Level 1|
@@ -25,13 +25,13 @@ test_cases:
 - id: Busy
   input:
     1:
-      gt0003|Number of ED beds: 60,1
-      gt0004|Number of hospital beds: 400,1
-      gt0005|Total patients in the ED: 10,1
-      gt0006|Patients on ventilators in the ED: 1,1
-      gt0007|Number of admits in the ED: 6,1
-      gt0008|Waiting time of longest admitted patient: 2,h
-      gt0009|Waiting time of longest waiting room patient: 1,h
+      gt0003|Number of ED beds: 60
+      gt0004|Number of hospital beds: 400
+      gt0005|Total patients in the ED: 10
+      gt0006|Patients on ventilators in the ED: 1
+      gt0007|Number of admits in the ED: 6
+      gt0008|Waiting time of longest admitted patient: "2,h"
+      gt0009|Waiting time of longest waiting room patient: "1,h"
   expected_output:
     1:
       gt0012|Level: local::at0004|Level 2|
@@ -46,13 +46,13 @@ test_cases:
 - id: Extremely busy but not overcrowded
   input:
     1:
-      gt0003|Number of ED beds: 60,1
-      gt0004|Number of hospital beds: 400,1
-      gt0005|Total patients in the ED: 35,1
-      gt0006|Patients on ventilators in the ED: 2,1
-      gt0007|Number of admits in the ED: 19,1
-      gt0008|Waiting time of longest admitted patient: 3,h
-      gt0009|Waiting time of longest waiting room patient: 2,h
+      gt0003|Number of ED beds: 60
+      gt0004|Number of hospital beds: 400
+      gt0005|Total patients in the ED: 35
+      gt0006|Patients on ventilators in the ED: 2
+      gt0007|Number of admits in the ED: 19
+      gt0008|Waiting time of longest admitted patient: "3,h"
+      gt0009|Waiting time of longest waiting room patient: "2,h"
   expected_output:
     1:
       gt0012|Level: local::at0005|Level 3|
@@ -67,13 +67,13 @@ test_cases:
 - id: Overcrowded
   input:
     1:
-      gt0003|Number of ED beds: 60,1
-      gt0004|Number of hospital beds: 400,1
-      gt0005|Total patients in the ED: 40,1
-      gt0006|Patients on ventilators in the ED: 2,1
-      gt0007|Number of admits in the ED: 35,1
-      gt0008|Waiting time of longest admitted patient: 3,h
-      gt0009|Waiting time of longest waiting room patient: 1,h
+      gt0003|Number of ED beds: 60
+      gt0004|Number of hospital beds: 400
+      gt0005|Total patients in the ED: 40
+      gt0006|Patients on ventilators in the ED: 2
+      gt0007|Number of admits in the ED: 35
+      gt0008|Waiting time of longest admitted patient: "3,h"
+      gt0009|Waiting time of longest waiting room patient: "1,h"
   expected_output:
     1:
       gt0012|Level: local::at0006|Level 4|
@@ -88,13 +88,13 @@ test_cases:
 - id: Severly overcrowded
   input:
     1:
-      gt0003|Number of ED beds: 60,1
-      gt0004|Number of hospital beds: 400,1
-      gt0005|Total patients in the ED: 55,1
-      gt0006|Patients on ventilators in the ED: 2,1
-      gt0007|Number of admits in the ED: 28,1
-      gt0008|Waiting time of longest admitted patient: 3,h
-      gt0009|Waiting time of longest waiting room patient: 2,h
+      gt0003|Number of ED beds: 60
+      gt0004|Number of hospital beds: 400
+      gt0005|Total patients in the ED: 55
+      gt0006|Patients on ventilators in the ED: 2
+      gt0007|Number of admits in the ED: 28
+      gt0008|Waiting time of longest admitted patient: "3,h"
+      gt0009|Waiting time of longest waiting room patient: "2,h"
   expected_output:
     1:
       gt0012|Level: local::at0007|Level 5|
@@ -109,13 +109,13 @@ test_cases:
 - id: Dangerously overcrowded
   input:
     1:
-      gt0003|Number of ED beds: 20,1
-      gt0004|Number of hospital beds: 70,1
-      gt0005|Total patients in the ED: 70,1
-      gt0006|Patients on ventilators in the ED: 1,1
-      gt0007|Number of admits in the ED: 2,1
-      gt0008|Waiting time of longest admitted patient: 5,h
-      gt0009|Waiting time of longest waiting room patient: 1,h
+      gt0003|Number of ED beds: 20
+      gt0004|Number of hospital beds: 70
+      gt0005|Total patients in the ED: 70
+      gt0006|Patients on ventilators in the ED: 1
+      gt0007|Number of admits in the ED: 2
+      gt0008|Waiting time of longest admitted patient: "5,h"
+      gt0009|Waiting time of longest waiting room patient: "1,h"
   expected_output:
     1:
       gt0012|Level: local::at0008|Level 6|
