--- a/gdl2/ASCVD_risk_calculator.v1.test.yml
+++ b/gdl2/ASCVD_risk_calculator.v1.test.yml
@@ -1,269 +1,201 @@
 guidelines:
   1: ASCVD_risk_calculator.v1
 test_cases:
-- id: Test no input
-  input:
-    1: {}
-  expected_output:
-    1: {}
-- id: Systolic blood pressure missing (negative test)
+- id: 1. Female, white, not treated for HTN
   input:
     1:
-      gt0017|HDL Cholesterol: 40,mmol/l
-      gt0018|Total Cholesterol: 13,mmol/l
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 50,mg/dl
+      gt0018|Total Cholesterol: 213,mg/dl
       gt0026|Race: local::at0011|White|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1: {}
-- id: HDL Cholesterol missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0018|Total Cholesterol: 13,mmol/l
-      gt0026|Race: local::at0011|White|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1: {}
-- id: Total Cholesterol missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 40,mmol/l
-      gt0026|Race: local::at0011|White|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1: {}
-- id: Age missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 40,mmol/l
-      gt0018|Total Cholesterol: 13,mmol/l
-      gt0026|Race: local::at0011|White|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1: {}
-- id: Sex missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 40,mmol/l
-      gt0018|Total Cholesterol: 13,mmol/l
-      gt0026|Race: local::at0011|White|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-  expected_output:
-    1: {}
-- id: Treatment for hypertension missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 40,mmol/l
-      gt0018|Total Cholesterol: 13,mmol/l
-      gt0026|Race: local::at0011|White|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1: {}
-- id: Race missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 40,mmol/l
-      gt0018|Total Cholesterol: 13,mmol/l
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1: {}
-- id: Diabetes missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 40,mmol/l
-      gt0018|Total Cholesterol: 13,mmol/l
-      gt0026|Race: local::at0013|Other|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1: {}
-- id: Smoker missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 40,mmol/l
-      gt0018|Total Cholesterol: 13,mmol/l
-      gt0026|Race: local::at0013|Other|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 0|local::at0038|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1: {}
-- id: Test conversion factor
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
-      gt0026|Race: local::at0013|Other|
       gt0027|Treatment for hypertension: local::at0032|No|
       gt0029|Diabetes: 0|local::at0038|No|
       gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
+      gt0055|Age: 55,a
       gt0056|Sex: local::at0006|Female|
   expected_output:
     1:
-      gt0052|Individual sum: -17.41
-      gt0053|Estimated 10-y risk: 33.1,%
-- id: White woman with treatment
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 1.4%
+      gt0052|Individual sum: -29.677
+      gt0053|Estimated 10-y risk: 2.1,%
+      gt0058|Recommendation: No statin recommended.
+- id: 2. Female, others, treated for HTN
   input:
     1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
+      gt0015|Systolic blood pressure: 140,mm[Hg]
+      gt0017|HDL Cholesterol: 50,mg/dl
+      gt0018|Total Cholesterol: 213,mg/dl
+      gt0026|Race: local::at0013|Other|
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 0|local::at0038|No|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 55,a
+      gt0056|Sex: local::at0006|Female|
+  expected_output:
+    1:
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 1.4%
+      gt0052|Individual sum: -29.069
+      gt0053|Estimated 10-y risk: 3.74,%
+      gt0058|Recommendation: No statin recommended.
+- id: 3. Female, white, treated for HTN, high intensity statin
+  input:
+    1:
+      gt0015|Systolic blood pressure: 140,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mg/dl
+      gt0018|Total Cholesterol: 250,mg/dl
       gt0026|Race: local::at0011|White|
       gt0027|Treatment for hypertension: local::at0033|Yes|
       gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
+      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0055|Age: 55,a
       gt0056|Sex: local::at0006|Female|
   expected_output:
     1:
-      gt0052|Individual sum: -16.46
-      gt0053|Estimated 10-y risk: 35.2,%
-- id: White woman no treatment
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 1.4%
+      gt0052|Individual sum: -27.122
+      gt0053|Estimated 10-y risk: 23.42,%
+      gt0058|Recommendation: High-intensity statin recommended.
+- id: 4. Female, African American, treated for HTN, high intensity statin
   input:
     1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
-      gt0026|Race: local::at0011|White|
-      gt0027|Treatment for hypertension: local::at0032|No|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1:
-      gt0052|Individual sum: -16.75
-      gt0053|Estimated 10-y risk: 34.6,%
-- id: African American woman no treatment
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
-      gt0026|Race: local::at0012|African American|
-      gt0027|Treatment for hypertension: local::at0032|No|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0006|Female|
-  expected_output:
-    1:
-      gt0052|Individual sum: 101.87
-      gt0053|Estimated 10-y risk: 51.8,%
-- id: African American woman with treatment
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
+      gt0015|Systolic blood pressure: 140,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mg/dl
+      gt0018|Total Cholesterol: 250,mg/dl
       gt0026|Race: local::at0012|African American|
       gt0027|Treatment for hypertension: local::at0033|Yes|
       gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
+      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0055|Age: 55,a
       gt0056|Sex: local::at0006|Female|
   expected_output:
     1:
-      gt0052|Individual sum: 102.82
-      gt0053|Estimated 10-y risk: 53.9,%
-- id: African American man with treatment
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 1.8%
+      gt0052|Individual sum: 89.069
+      gt0053|Estimated 10-y risk: 42.8,%
+      gt0058|Recommendation: High-intensity statin recommended.
+- id: 5. Female, African American, not treated for HTN, no statin
   input:
     1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
-      gt0026|Race: local::at0012|African American|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0005|Male|
-  expected_output:
-    1:
-      gt0052|Individual sum: 21.43
-      gt0053|Estimated 10-y risk: 18.8,%
-- id: African American man no treatment
-  input:
-    1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
+      gt0015|Systolic blood pressure: 110,mm[Hg]
+      gt0017|HDL Cholesterol: 50,mg/dl
+      gt0018|Total Cholesterol: 215,mg/dl
       gt0026|Race: local::at0012|African American|
       gt0027|Treatment for hypertension: local::at0032|No|
-      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0029|Diabetes: 0|local::at0038|No|
       gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
-      gt0056|Sex: local::at0005|Male|
+      gt0055|Age: 55,a
+      gt0056|Sex: local::at0006|Female|
   expected_output:
     1:
-      gt0052|Individual sum: 20.92
-      gt0053|Estimated 10-y risk: 14.1,%
-- id: White man no treatment
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 1.8%
+      gt0052|Individual sum: 85.878
+      gt0053|Estimated 10-y risk: 2.3,%
+      gt0058|Recommendation: No statin recommended.
+- id: 6. Male, white, not treated for HTN, no statin
   input:
     1:
-      gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
+      gt0015|Systolic blood pressure: 110,mm[Hg]
+      gt0017|HDL Cholesterol: 50,mg/dl
+      gt0018|Total Cholesterol: 215,mg/dl
       gt0026|Race: local::at0011|White|
       gt0027|Treatment for hypertension: local::at0032|No|
-      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0029|Diabetes: 0|local::at0038|No|
       gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
+      gt0055|Age: 55,a
       gt0056|Sex: local::at0005|Male|
   expected_output:
     1:
-      gt0052|Individual sum: 69.69
-      gt0053|Estimated 10-y risk: 53.3,%
-- id: White man with treatment
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 3.6%
+      gt0052|Individual sum: 60.56
+      gt0053|Estimated 10-y risk: 4.7,%
+      gt0058|Recommendation: No statin recommended.
+- id: 7. Male, white, treated for HTN, moderate to high intensity statin
+  input:
+    1:
+      gt0015|Systolic blood pressure: 150,mm[Hg]
+      gt0017|HDL Cholesterol: 45,mg/dl
+      gt0018|Total Cholesterol: 215,mg/dl
+      gt0026|Race: local::at0011|White|
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 0|local::at0038|No|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 55,a
+      gt0056|Sex: local::at0005|Male|
+  expected_output:
+    1:
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 3.6%
+      gt0052|Individual sum: 61.364
+      gt0053|Estimated 10-y risk: 10.2,%
+      gt0058|Recommendation: Moderate- to high-intensity statin recommended.
+- id: 8. Male, African American, not treated for HTN, moderate to high intensity statin
   input:
     1:
       gt0015|Systolic blood pressure: 120,mm[Hg]
-      gt0017|HDL Cholesterol: 0.05,mg/dl
-      gt0018|Total Cholesterol: 193,mg/dl
-      gt0026|Race: local::at0011|White|
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 1|local::at0039|Yes|
-      gt0030|Smoker: 0|local::at0041|No|
-      gt0055|Age: 40,a
+      gt0017|HDL Cholesterol: 50,mg/dl
+      gt0018|Total Cholesterol: 200,mg/dl
+      gt0026|Race: local::at0012|African American|
+      gt0027|Treatment for hypertension: local::at0032|No|
+      gt0029|Diabetes: 0|local::at0038|No|
+      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0055|Age: 55,a
       gt0056|Sex: local::at0005|Male|
   expected_output:
     1:
-      gt0052|Individual sum: 69.84
-      gt0053|Estimated 10-y risk: 53.9,%
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 4.9%
+      gt0052|Individual sum: 19.503
+      gt0053|Estimated 10-y risk: 10.1,%
+      gt0058|Recommendation: Moderate- to high-intensity statin recommended.
+- id: 9. Male, African American, treated for HTN, moderate to high intensity statin
+  input:
+    1:
+      gt0015|Systolic blood pressure: 130,mm[Hg]
+      gt0017|HDL Cholesterol: 1.29,mmol/l
+      gt0018|Total Cholesterol: 5.51,mmol/l
+      gt0026|Race: local::at0012|African American|
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 0|local::at0038|No|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 55,a
+      gt0056|Sex: local::at0005|Male|
+  expected_output:
+    1:
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 4.9%
+      gt0052|Individual sum: 19.639
+      gt0053|Estimated 10-y risk: 11.5,%
+      gt0058|Recommendation: Moderate- to high-intensity statin recommended.
+- id: 11. Female, others, moderate intensity statins
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 1.29,mmol/l
+      gt0018|Total Cholesterol: 5.51,mmol/l
+      gt0026|Race: local::at0013|Other|
+      gt0027|Treatment for hypertension: local::at0032|No|
+      gt0029|Diabetes: 0|local::at0038|No|
+      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0055|Age: 55,a
+      gt0056|Sex: local::at0006|Female|
+  expected_output:
+    1:
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 1.4%
+      gt0052|Individual sum: -28.772
+      gt0053|Estimated 10-y risk: 5.1,%
+      gt0058|Recommendation: Moderate-intensity statin recommended.
+- id: 12. Male, others, high intensity statin
+  input:
+    1:
+      gt0015|Systolic blood pressure: 140,mm[Hg]
+      gt0017|HDL Cholesterol: 50,mmol/l
+      gt0018|Total Cholesterol: 260,mmol/l
+      gt0026|Race: local::at0013|Other|
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0055|Age: 67,a
+      gt0056|Sex: local::at0005|Male|
+  expected_output:
+    1:
+      gt0062|10-year cardiovascular risk if risk factors were optimal: 3.6%
+      gt0052|Individual sum: 63.560
+      gt0053|Estimated 10-y risk: 62.0,%
+      gt0058|Recommendation: High-intensity statin recommended.
