--- a/gdl2/SPN_Malignancy_risk_score.v1.test.yml
+++ b/gdl2/SPN_Malignancy_risk_score.v1.test.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: SPN_Malignancy.v1
+  1: SPN_Malignancy_risk_score.v1
 test_cases:
 - id: Test no input
   input:
@@ -14,7 +14,7 @@ test_cases:
       gt0010|Nodule spiculation: 1|local::at0009|Yes|
       gt0011|FDG-PET: local::at0025|Faint uptake|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1: {}
 - id: Extrathoracic cancer diagnosis missing (negative test)
@@ -25,7 +25,7 @@ test_cases:
       gt0010|Nodule spiculation: 1|local::at0009|Yes|
       gt0011|FDG-PET: local::at0025|Faint uptake|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1: {}
 - id: Upper lobe location of tumor missing (negative test)
@@ -36,7 +36,7 @@ test_cases:
       gt0010|Nodule spiculation: 1|local::at0009|Yes|
       gt0011|FDG-PET: local::at0025|Faint uptake|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1: {}
 - id: Nodule spiculation missing (negative test)
@@ -47,7 +47,7 @@ test_cases:
       gt0008|Upper lobe location of tumor: 1|local::at0009|Yes|
       gt0011|FDG-PET: local::at0025|Faint uptake|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1: {}
 - id: FDG-PET missing (negative test)
@@ -58,7 +58,7 @@ test_cases:
       gt0008|Upper lobe location of tumor: 1|local::at0009|Yes|
       gt0010|Nodule spiculation: 0|local::at0008|No|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1: {}
 - id: Nodule diameter missing (negative test)
@@ -69,7 +69,7 @@ test_cases:
       gt0008|Upper lobe location of tumor: 1|local::at0009|Yes|
       gt0010|Nodule spiculation: 0|local::at0008|No|
       gt0011|FDG-PET: local::at0025|Faint uptake|
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1: {}
 - id: Age missing (negative test)
@@ -92,7 +92,7 @@ test_cases:
       gt0010|Nodule spiculation: 0|local::at0008|No|
       gt0011|FDG-PET: local::at0023|PET not performed|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1:
       gt0033|Probability of malignancy: 2.7,%
@@ -105,7 +105,7 @@ test_cases:
       gt0010|Nodule spiculation: 0|local::at0008|No|
       gt0011|FDG-PET: local::at0027|Intense uptake|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1:
       gt0033|Probability of malignancy: 53.3,%
@@ -118,7 +118,7 @@ test_cases:
       gt0010|Nodule spiculation: 0|local::at0008|No|
       gt0011|FDG-PET: local::at0025|Faint uptake|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1:
       gt0033|Probability of malignancy: 9.0,%
@@ -131,7 +131,7 @@ test_cases:
       gt0010|Nodule spiculation: 0|local::at0008|No|
       gt0011|FDG-PET: local::at0026|Moderate uptake|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1:
       gt0033|Probability of malignancy: 49.5,%
@@ -144,7 +144,7 @@ test_cases:
       gt0010|Nodule spiculation: 0|local::at0008|No|
       gt0011|FDG-PET: local::at0024|No uptake|
       gt0028|Nodule diameter: 4,mm
-      gt0039|Age: 50,a
+      gt0043|Age: 50,a
   expected_output:
     1:
       gt0033|Probability of malignancy: 1.0,%
