Update metadata and add units

--- a/gdl2/Stool_Osmotic_Gap.v1.test.yml
+++ b/gdl2/Stool_Osmotic_Gap.v1.test.yml
@@ -9,30 +9,31 @@ test_cases:
 - id: Stool osmolarity missing (negative test)
   input:
     1:
-      'gt0005|Stool sodium ': 40,mg/dl
-      'gt0006|Stool potassium ': 50,mg/dl
+      'gt0005|Stool sodium ': 40,mEq/l
+      'gt0006|Stool potassium ': 50,mEq/l
   expected_output:
     1: {}
 - id: Stool sodium missing (negative test)
   input:
     1:
-      gt0003|Stool osmolarity: 300,mmol/L
-      'gt0006|Stool potassium ': 50,mg/dl
+      gt0003|Stool osmolarity: 300,mmol/l
+      'gt0006|Stool potassium ': 50,mmol/l
   expected_output:
     1: {}
 - id: Stool potassium missing (negative test)
   input:
     1:
-      gt0003|Stool osmolarity: 300,mmol/L
-      'gt0005|Stool sodium ': 40,mg/dl
+      gt0003|Stool osmolarity: 300,mEq/l
+      'gt0005|Stool sodium ': 40,mEq/l
   expected_output:
     1: {}
 - id: Test calculation of stool osm gap
   input:
     1:
-      gt0003|Stool osmolarity: 290,mmol/L
+      gt0003|Stool osmolarity: 290,mmol/l
       'gt0005|Stool sodium ': 180,mmol/l
       'gt0006|Stool potassium ': 200,mmol/l
   expected_output:
     1:
       gt0008|Stool Osmolal Gap: -470,mOsm/kg
+      gt0010|Comment: While definitions vary, some sources suggest a Stool Osmolar Gap > 100 as being a predominantly osmotic diarrhea.
