--- a/gdl2/Insulin_to_carb_ratio_calculator.v1.test.yml
+++ b/gdl2/Insulin_to_carb_ratio_calculator.v1.test.yml
@@ -4,14 +4,13 @@ test_cases:
 - id: Default
   input:
     1:
-      gt0005|Carbonhydrate intake in grams: 400,gm
+      gt0005|Carbohydrate intake in grams: 400,gm
   expected_output:
     1: {}
-
 - id: Calculate Insulin to carb ratio
   input:
     1:
-      gt0005|Carbonhydrate intake in grams: 400,gm
+      gt0005|Carbohydrate intake in grams: 400,gm
       gt0006|Number of daily insulin units: 10,1
   expected_output:
     1:
