Use latest version of body temperature archetype.

--- a/gdl2/Pediatric_Appendicitis_Score_guideline.v1.gdl2.json
+++ b/gdl2/Pediatric_Appendicitis_Score_guideline.v1.gdl2.json
@@ -59,8 +59,8 @@
       },
       "gt0023": {
         "id": "gt0023",
-        "model_id": "openEHR-EHR-OBSERVATION.body_temperature.v1",
-        "template_id": "openEHR-EHR-OBSERVATION.body_temperature.v1",
+        "model_id": "openEHR-EHR-OBSERVATION.body_temperature.v2",
+        "template_id": "openEHR-EHR-OBSERVATION.body_temperature.v2",
         "type": "INPUT",
         "elements": {
           "gt0024": {
@@ -131,7 +131,7 @@
         "id": "gt0044",
         "priority": 8,
         "when": [
-          "(($gt0024|Temperature|.magnitude<38)&&($gt0024|Temperature|.unit=='°C'))||(($gt0024|Temperature|.magnitude<100.4)&&($gt0024|Temperature|.unit=='°F'))"
+          "(($gt0024|Temperature|.magnitude<38)&&($gt0024|Temperature|.unit=='Cel'))||(($gt0024|Temperature|.magnitude<100.4)&&($gt0024|Temperature|.unit=='[degF]'))"
         ],
         "then": [
           "$gt0032|Fever|=0|local::at0011|No|"
@@ -141,7 +141,7 @@
         "id": "gt0036",
         "priority": 7,
         "when": [
-          "(($gt0024|Temperature|.magnitude>=38)&&($gt0024|Temperature|.unit=='°C'))||(($gt0024|Temperature|.magnitude>=100.4)&&($gt0024|Temperature|.unit=='°F'))"
+          "(($gt0024|Temperature|.magnitude>=38)&&($gt0024|Temperature|.unit=='Cel'))||(($gt0024|Temperature|.magnitude>=100.4)&&($gt0024|Temperature|.unit=='[degF]'))"
         ],
         "then": [
           "$gt0032|Fever|=1|local::at0012|Yes|"
