Update test cases

--- a/gdl2/Aa_O2_gradient_complex.v1.test.yml
+++ b/gdl2/Aa_O2_gradient_complex.v1.test.yml
@@ -1,53 +1,53 @@
 guidelines:
   1: Aa_o2_gradient_complex.v1
 test_cases:
-- id: Low PaO2
-  input:
-    1:
-      gt0003|Atmospheric pressure: 101.33,kPa
-      gt0004|Respiratory quotient: 0.8,1
-      gt0012|Age: 30,a
-      gt0014|Temperature: 97,°F
-      gt0016|PaO2: 5,kPa
-      gt0017|PaCO2: 5,kPa
-      gt0018|FiO2: 21,%
-  expected_output:
-    1:
-      gt0007|A-a O2 gradient: 8.77,kPa
-      gt0006|Vapor pressure: 5.98,kPa
-      gt0009|Expected A-a gradient: 1.53,kPa
-      gt0010|Evaluation: Hypoventilation and high altitude can be ruled out. Suspect V/Q mismatch, Shunt or Alveolar hypoventilation.
+  - id: Low PaO2
+    input:
+      1:
+        gt0003|Atmospheric pressure: 101.33,kPa
+        gt0004|Respiratory quotient: 0.8,1
+        gt0012|Age: 30,a
+        gt0014|Temperature: 97,[degF]
+        gt0016|PaO2: 5,kPa
+        gt0017|PaCO2: 5,kPa
+        gt0018|FiO2: 21,%
+    expected_output:
+      1:
+        gt0007|A-a O2 gradient: 8.77,kPa
+        gt0006|Vapor pressure: 5.98,kPa
+        gt0009|Expected A-a gradient: 1.53,kPa
+        gt0010|Evaluation: Hypoventilation and high altitude can be ruled out. Suspect V/Q mismatch, Shunt or Alveolar hypoventilation.
 
-- id: Normal
-  input:
-    1:
-      gt0003|Atmospheric pressure: 101.33,kPa
-      gt0004|Respiratory quotient: 0.8,1
-      gt0012|Age: 30,a
-      gt0014|Temperature: 37,°C
-      gt0016|PaO2: 10,kPa
-      gt0017|PaCO2: 5,kPa
-      gt0018|FiO2: 21,%
-  expected_output:
-    1:
-      gt0007|A-a O2 gradient: 3.71,kPa
-      gt0006|Vapor pressure: 6.28,kPa
-      gt0009|Expected A-a gradient: 1.53,kPa
-      gt0010|Evaluation: Hypoventilation and high altitude can be ruled out. Suspect V/Q mismatch, Shunt or Alveolar hypoventilation.
+  - id: Normal
+    input:
+      1:
+        gt0003|Atmospheric pressure: 101.33,kPa
+        gt0004|Respiratory quotient: 0.8,1
+        gt0012|Age: 30,a
+        gt0014|Temperature: 37,Cel
+        gt0016|PaO2: 10,kPa
+        gt0017|PaCO2: 5,kPa
+        gt0018|FiO2: 21,%
+    expected_output:
+      1:
+        gt0007|A-a O2 gradient: 3.71,kPa
+        gt0006|Vapor pressure: 6.28,kPa
+        gt0009|Expected A-a gradient: 1.53,kPa
+        gt0010|Evaluation: Hypoventilation and high altitude can be ruled out. Suspect V/Q mismatch, Shunt or Alveolar hypoventilation.
 
-- id: Low gradient
-  input:
-    1:
-      gt0003|Atmospheric pressure: 101.33,kPa
-      gt0004|Respiratory quotient: 0.8,1
-      gt0012|Age: 30,a
-      gt0014|Temperature: 37,°C
-      gt0016|PaO2: 10,kPa
-      gt0017|PaCO2: 7,kPa
-      gt0018|FiO2: 21,%
-  expected_output:
-    1:
-      gt0007|A-a O2 gradient: 1.21,kPa
-      gt0006|Vapor pressure: 6.28,kPa
-      gt0009|Expected A-a gradient: 1.53,kPa
-      gt0010|Evaluation: V/Q mismatch, Shunt and Alveolar hypoventilation can be ruled out. Suspect hypoventilation or high altitude.
+  - id: Low gradient
+    input:
+      1:
+        gt0003|Atmospheric pressure: 101.33,kPa
+        gt0004|Respiratory quotient: 0.8,1
+        gt0012|Age: 30,a
+        gt0014|Temperature: 37,Cel
+        gt0016|PaO2: 10,kPa
+        gt0017|PaCO2: 7,kPa
+        gt0018|FiO2: 21,%
+    expected_output:
+      1:
+        gt0007|A-a O2 gradient: 1.21,kPa
+        gt0006|Vapor pressure: 6.28,kPa
+        gt0009|Expected A-a gradient: 1.53,kPa
+        gt0010|Evaluation: V/Q mismatch, Shunt and Alveolar hypoventilation can be ruled out. Suspect hypoventilation or high altitude.
