--- a/gdl2/Newsom_score_non-traumatic_chest_pain.v1.test.yml
+++ b/gdl2/Newsom_score_non-traumatic_chest_pain.v1.test.yml
@@ -1,127 +1,127 @@
 guidelines:
   1: Newsom_score_non-traumatic_chest_pain.v1
 test_cases:
-- id: precondition
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-  expected_output:
-    1:
-      gt0021|Risk: local::at0009|Low risk|
-      gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
+  - id: precondition
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+    expected_output:
+      1:
+        gt0021|Risk: local::at0009|Low risk|
+        gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
 
-- id: age 59a
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-  expected_output:
-    1:
-      gt0021|Risk: local::at0009|Low risk|
-      gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
+  - id: age 59a
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+    expected_output:
+      1:
+        gt0021|Risk: local::at0009|Low risk|
+        gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
 
-- id: age 60a
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 60,a
-  expected_output:
-    1:
-      gt0021|Risk: local::at0010|Not low risk|
-      gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
+  - id: age 60a
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 60,a
+    expected_output:
+      1:
+        gt0021|Risk: local::at0010|Not low risk|
+        gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
 
-- id: respiration rate 24/min
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-      gt0015|Respiration rate: 24,/min
-  expected_output:
-    1:
-      gt0021|Risk: local::at0009|Low risk|
-      gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
+  - id: respiration rate 24/min
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+        gt0015|Respiration rate: 24,/min
+    expected_output:
+      1:
+        gt0021|Risk: local::at0009|Low risk|
+        gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
 
-- id: respiration rate 25/min
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-      gt0015|Respiration rate: 25,/min
-  expected_output:
-    1:
-      gt0021|Risk: local::at0010|Not low risk|
-      gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
+  - id: respiration rate 25/min
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+        gt0015|Respiration rate: 25,/min
+    expected_output:
+      1:
+        gt0021|Risk: local::at0010|Not low risk|
+        gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
 
-- id: temp 37.9 °C
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-      gt0015|Respiration rate: 24,/min
-      gt0017|Body temperature: 37.9,°C
-  expected_output:
-    1:
-      gt0021|Risk: local::at0009|Low risk|
-      gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
+  - id: temp 37.9 °C
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+        gt0015|Respiration rate: 24,/min
+        gt0017|Body temperature: 37.9,Cel
+    expected_output:
+      1:
+        gt0021|Risk: local::at0009|Low risk|
+        gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
 
-- id: temp 38 °C
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-      gt0015|Respiration rate: 24,/min
-      gt0017|Body temperature: 38,°C
-  expected_output:
-    1:
-      gt0021|Risk: local::at0010|Not low risk|
-      gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
+  - id: temp 38 °C
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+        gt0015|Respiration rate: 24,/min
+        gt0017|Body temperature: 38,Cel
+    expected_output:
+      1:
+        gt0021|Risk: local::at0010|Not low risk|
+        gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
 
-- id: temp 100.3 °F
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-      gt0015|Respiration rate: 24,/min
-      gt0017|Body temperature: 100.3,°F
-  expected_output:
-    1:
-      gt0021|Risk: local::at0009|Low risk|
-      gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
+  - id: temp 100.3 °F
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+        gt0015|Respiration rate: 24,/min
+        gt0017|Body temperature: 100.3,[degF]
+    expected_output:
+      1:
+        gt0021|Risk: local::at0009|Low risk|
+        gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
 
-- id: temp 100.4 °F
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-      gt0015|Respiration rate: 24,/min
-      gt0017|Body temperature: 100.4,°F
-  expected_output:
-    1:
-      gt0021|Risk: local::at0010|Not low risk|
-      gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
+  - id: temp 100.4 °F
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+        gt0015|Respiration rate: 24,/min
+        gt0017|Body temperature: 100.4,[degF]
+    expected_output:
+      1:
+        gt0021|Risk: local::at0010|Not low risk|
+        gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
 
-- id: Oxygen saturation 90%
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-      gt0015|Respiration rate: 24,/min
-      gt0017|Body temperature: 100.3,°F
-      gt0019|Oxygen saturation: 90,100,2
-  expected_output:
-    1:
-      gt0021|Risk: local::at0009|Low risk|
-      gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
+  - id: Oxygen saturation 90%
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+        gt0015|Respiration rate: 24,/min
+        gt0017|Body temperature: 100.3,[degF]
+        gt0019|Oxygen saturation: 90,100,2
+    expected_output:
+      1:
+        gt0021|Risk: local::at0009|Low risk|
+        gt0022|Recommendation: local::at0012|Chest X-ray may not be necessary|
 
-- id: Oxygen saturation 89%
-  input:
-    1:
-      gt0003|Non-traumatic chest pain: local::at0045|Yes|
-      gt0013|Age: 59,a
-      gt0015|Respiration rate: 24,/min
-      gt0017|Body temperature: 100.3,°F
-      gt0019|Oxygen saturation: 89,100,2
-  expected_output:
-    1:
-      gt0021|Risk: local::at0010|Not low risk|
-      gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
+  - id: Oxygen saturation 89%
+    input:
+      1:
+        gt0003|Non-traumatic chest pain: local::at0045|Yes|
+        gt0013|Age: 59,a
+        gt0015|Respiration rate: 24,/min
+        gt0017|Body temperature: 100.3,[degF]
+        gt0019|Oxygen saturation: 89,100,2
+    expected_output:
+      1:
+        gt0021|Risk: local::at0010|Not low risk|
+        gt0022|Recommendation: local::at0013|Chest X-ray should be considered|
