--- a/gdl2/Kocher_Criteria.v1.test.yml
+++ b/gdl2/Kocher_Criteria.v1.test.yml
@@ -1,32 +1,32 @@
 guidelines:
   1: Kocher_Criteria.v1
 test_cases:
-- id: case_1:Number of criteria met= 1
-  input:
-    1:
-      gt0003|Temperature: 38,°C
-      gt0009|Non weight-bearing?: 0|local::at0012|No|
-      gt0013|White cell count: 11000,10*9/l
-      gt0014|Erythrocyte sedimentation rate (ESR): 30,mm/h
-  expected_output:
-    1:
-      gt0005|Fever: 0|local::at0010|No|
-      gt0011|ESR > 40mm/h: 0|local::at0014|No|
-      gt0012|WBC > 12,000 cells/mm3: 1|local::at0017|Yes|
-      gt0026|Number of criteria met: 1
-      gt0028|Probability of septic arthritis: 1|local::at0004|3%|
+  - id: case_1:Number of criteria met= 1
+    input:
+      1:
+        gt0003|Temperature: 38,Cel
+        gt0009|Non weight-bearing?: 0|local::at0012|No|
+        gt0013|White cell count: 11000,10*9/l
+        gt0014|Erythrocyte sedimentation rate (ESR): 30,mm/h
+    expected_output:
+      1:
+        gt0005|Fever: 0|local::at0010|No|
+        gt0011|ESR > 40mm/h: 0|local::at0014|No|
+        gt0012|WBC > 12,000 cells/mm3: 1|local::at0017|Yes|
+        gt0026|Number of criteria met: 1
+        gt0028|Probability of septic arthritis: 1|local::at0004|3%|
 
-- id: case_2:Number of critera met= 4
-  input:
-    1:
-      gt0003|Temperature: 39,°C
-      gt0009|Non weight-bearing?: 1|local::at0013|Yes|
-      gt0013|White cell count: 13000,10*9/l
-      gt0014|Erythrocyte sedimentation rate (ESR): 45,mm/h
-  expected_output:
-    1:
-      gt0005|Fever: 1|local::at0011|Yes|
-      gt0011|ESR > 40mm/h: 1|local::at0015|Yes|
-      gt0012|WBC > 12,000 cells/mm3: 1|local::at0017|Yes|
-      gt0026|Number of criteria met: 4
-      gt0028|Probability of septic arthritis: 4|local::at0007|99,6%|
+  - id: case_2:Number of critera met= 4
+    input:
+      1:
+        gt0003|Temperature: 39,Cel
+        gt0009|Non weight-bearing?: 1|local::at0013|Yes|
+        gt0013|White cell count: 13000,10*9/l
+        gt0014|Erythrocyte sedimentation rate (ESR): 45,mm/h
+    expected_output:
+      1:
+        gt0005|Fever: 1|local::at0011|Yes|
+        gt0011|ESR > 40mm/h: 1|local::at0015|Yes|
+        gt0012|WBC > 12,000 cells/mm3: 1|local::at0017|Yes|
+        gt0026|Number of criteria met: 4
+        gt0028|Probability of septic arthritis: 4|local::at0007|99,6%|
