--- a/gdl2/MEWS.v1.1.test.yml
+++ b/gdl2/MEWS.v1.1.test.yml
@@ -1,115 +1,110 @@
 guidelines:
   1: MEWS.v1.1
 test_cases:
-- id: confused, unresponsive patient, RR22
-  input:
-    1:
-      gt0015|Rate: 77,/min 
-      gt0013|Respiration rate: 22,/min 
-      gt0011|AVPU Observation: local::at0008|Unresponsive|
-      gt0012|New Confusion: local::at0011|Present| 
-      gt0010|Body temperature: 37,°C 
-      gt0009|Systolic: 120,mm[Hg] 
-  expected_output:
-    1:
-      gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0020|Level of consciousness: 3|local::at0027|Unresponsive|
-      gt0022|Total score: 5
-      gt0019|Temperature: 0|local::at0020|35 - 38.4 °C|
-      gt0017|Heart Rate: 0|local::at0010|51 - 100 bpm|
-      gt0018|Systolic Blood Pressure: 0|local::at0015|101 - 199 mmHg|
+  - id: confused, unresponsive patient, RR22
+    input:
+      1:
+        gt0015|Rate: 77,/min
+        gt0013|Respiration rate: 22,/min
+        gt0011|AVPU Observation: local::at0008|Unresponsive|
+        gt0012|New Confusion: local::at0011|Present|
+        gt0010|Body temperature: 37,Cel
+        gt0009|Systolic: 120,mm[Hg]
+    expected_output:
+      1:
+        gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0020|Level of consciousness: 3|local::at0027|Unresponsive|
+        gt0022|Total score: 5
+        gt0019|Temperature: 0|local::at0020|35 - 38.4 °C|
+        gt0017|Heart Rate: 0|local::at0010|51 - 100 bpm|
+        gt0018|Systolic Blood Pressure: 0|local::at0015|101 - 199 mmHg|
 
-- id: hypothermia and BP 90
-  input:
-    1:
-      gt0015|Rate: 77,/min 
-      gt0013|Respiration rate: 22,/min 
-      gt0011|AVPU Observation: local::at0008|Unresponsive|
-      gt0012|New Confusion: local::at0011|Present| 
-      gt0010|Body temperature: 34,°C 
-      gt0009|Systolic: 90,mm[Hg] 
-  expected_output:
-    1:
-      gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0020|Level of consciousness: 3|local::at0027|Unresponsive|
-      gt0022|Total score: 8
-      gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0017|Heart Rate: 0|local::at0010|51 - 100 bpm|
-      gt0018|Systolic Blood Pressure: 1|local::at0016|81 - 100 mmHg|
+  - id: hypothermia and BP 90
+    input:
+      1:
+        gt0015|Rate: 77,/min
+        gt0013|Respiration rate: 22,/min
+        gt0011|AVPU Observation: local::at0008|Unresponsive|
+        gt0012|New Confusion: local::at0011|Present|
+        gt0010|Body temperature: 34,Cel
+        gt0009|Systolic: 90,mm[Hg]
+    expected_output:
+      1:
+        gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0020|Level of consciousness: 3|local::at0027|Unresponsive|
+        gt0022|Total score: 8
+        gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0017|Heart Rate: 0|local::at0010|51 - 100 bpm|
+        gt0018|Systolic Blood Pressure: 1|local::at0016|81 - 100 mmHg|
 
-- id: Hhypothermia, very low BP, consciousness pain
-  input:
-    1:
-      gt0015|Rate: 77,/min 
-      gt0013|Respiration rate: 22,/min 
-      gt0011|AVPU Observation: local::at0007|Pain|
-      gt0012|New Confusion: local::at0011|Present| 
-      gt0010|Body temperature: 34,°C 
-      gt0009|Systolic: 78,mm[Hg] 
-  expected_output:
-    1:
-      gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0020|Level of consciousness: 2|local::at0026|Pain|
-      gt0022|Total score: 8
-      gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0017|Heart Rate: 0|local::at0010|51 - 100 bpm|
-      gt0018|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
+  - id: Hhypothermia, very low BP, consciousness pain
+    input:
+      1:
+        gt0015|Rate: 77,/min
+        gt0013|Respiration rate: 22,/min
+        gt0011|AVPU Observation: local::at0007|Pain|
+        gt0012|New Confusion: local::at0011|Present|
+        gt0010|Body temperature: 34,Cel
+        gt0009|Systolic: 78,mm[Hg]
+    expected_output:
+      1:
+        gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0020|Level of consciousness: 2|local::at0026|Pain|
+        gt0022|Total score: 8
+        gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0017|Heart Rate: 0|local::at0010|51 - 100 bpm|
+        gt0018|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
 
+  - id: voice, HR below 50
+    input:
+      1:
+        gt0015|Rate: 49,/min
+        gt0013|Respiration rate: 22,/min
+        gt0011|AVPU Observation: local::at0006|Voice|
+        gt0012|New Confusion: local::at0011|Present|
+        gt0010|Body temperature: 34,Cel
+        gt0009|Systolic: 78,mm[Hg]
+    expected_output:
+      1:
+        gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0020|Level of consciousness: 1|local::at0025|New confusion or Voice|
+        gt0022|Total score: 8
+        gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0017|Heart Rate: 1|local::at0011|41 - 50 or 101 - 110 bpm|
+        gt0018|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
 
-- id: voice, HR below 50
-  input:
-    1:
-      gt0015|Rate: 49,/min 
-      gt0013|Respiration rate: 22,/min 
-      gt0011|AVPU Observation: local::at0006|Voice|
-      gt0012|New Confusion: local::at0011|Present| 
-      gt0010|Body temperature: 34,°C 
-      gt0009|Systolic: 78,mm[Hg] 
-  expected_output:
-    1:
-      gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0020|Level of consciousness: 1|local::at0025|New confusion or Voice|
-      gt0022|Total score: 8
-      gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0017|Heart Rate: 1|local::at0011|41 - 50 or 101 - 110 bpm|
-      gt0018|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
+  - id: extreme low HR and BP
+    input:
+      1:
+        gt0015|Rate: 37,/min
+        gt0013|Respiration rate: 22,/min
+        gt0011|AVPU Observation: local::at0006|Voice|
+        gt0012|New Confusion: local::at0011|Present|
+        gt0010|Body temperature: 34,Cel
+        gt0009|Systolic: 69,mm[Hg]
+    expected_output:
+      1:
+        gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0020|Level of consciousness: 1|local::at0025|New confusion or Voice|
+        gt0022|Total score: 10
+        gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0017|Heart Rate: 2|local::at0012|≤ 40 or 111 - 129 bpm|
+        gt0018|Systolic Blood Pressure: 3|local::at0018|≤ 70 mmHg|
 
-
-
-- id: extreme low HR and BP
-  input:
-    1:
-      gt0015|Rate: 37,/min 
-      gt0013|Respiration rate: 22,/min 
-      gt0011|AVPU Observation: local::at0006|Voice|
-      gt0012|New Confusion: local::at0011|Present| 
-      gt0010|Body temperature: 34,°C 
-      gt0009|Systolic: 69,mm[Hg] 
-  expected_output:
-    1:
-      gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0020|Level of consciousness: 1|local::at0025|New confusion or Voice|
-      gt0022|Total score: 10
-      gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0017|Heart Rate: 2|local::at0012|≤ 40 or 111 - 129 bpm|
-      gt0018|Systolic Blood Pressure: 3|local::at0018|≤ 70 mmHg|
-
-
-- id: respiratory rate low, alert, high BP, high HR
-  input:
-    1:
-      gt0015|Rate: 110,/min 
-      gt0013|Respiration rate: 8,/min 
-      gt0011|AVPU Observation: local::at0005|Alert|
-      gt0012|New Confusion: local::at0010|Absent| 
-      gt0010|Body temperature: 34,°C 
-      gt0009|Systolic: 210,mm[Hg] 
-  expected_output:
-    1:
-      gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0020|Level of consciousness: 0|local::at0024|Alert|
-      gt0022|Total score: 7
-      gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0017|Heart Rate: 1|local::at0011|41 - 50 or 101 - 110 bpm|
-      gt0018|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
-
+  - id: respiratory rate low, alert, high BP, high HR
+    input:
+      1:
+        gt0015|Rate: 110,/min
+        gt0013|Respiration rate: 8,/min
+        gt0011|AVPU Observation: local::at0005|Alert|
+        gt0012|New Confusion: local::at0010|Absent|
+        gt0010|Body temperature: 34,Cel
+        gt0009|Systolic: 210,mm[Hg]
+    expected_output:
+      1:
+        gt0016|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0020|Level of consciousness: 0|local::at0024|Alert|
+        gt0022|Total score: 7
+        gt0019|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0017|Heart Rate: 1|local::at0011|41 - 50 or 101 - 110 bpm|
+        gt0018|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
