--- a/gdl2/MEWS.v1.2.test.yml
+++ b/gdl2/MEWS.v1.2.test.yml
@@ -1,140 +1,137 @@
 guidelines:
   1: MEWS.v1.2
 test_cases:
-- id: confused patient, no RR set
-  input:
-    1:
-      gt0013|Pulse: 77,/min 
-      gt0015|Systolic blood pressure: 120,mm[Hg] 
-      gt0017|Temperature: 37,°C 
-      gt0019|AVPU Observation: local::at0008|Unresponsive|
-      gt0020|New Confusion: local::at0011|Present| 
-      gt0022|Total urine output/24 hr: 2000,ml 
-  expected_output:
-    1:
-      gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
-      gt0003|Respiratory Rate: 0|local::at0005|9 - 14 bpm|
-      gt0005|Systolic Blood Pressure: 0|local::at0015|101 - 199 mmHg|
-      gt0007|Level of consciousness: 3|local::at0027|Unresponsive|
-      gt0004|Heart Rate: 0|local::at0010|51 - 100 bpm|
-      gt0006|Temperature: 0|local::at0020|35 - 38.4 °C|
-      gt0009|Total score: 3
-- id: Same with RR 22/min
-  input:
-    1:
-      gt0011|Respiration rate: 22,/min 
-      gt0013|Pulse: 77,/min 
-      gt0015|Systolic blood pressure: 120,mm[Hg] 
-      gt0017|Temperature: 37,°C 
-      gt0019|AVPU Observation: local::at0008|Unresponsive|
-      gt0020|New Confusion: local::at0011|Present| 
-      gt0022|Total urine output/24 hr: 2000,ml 
-  expected_output:
-    1:
-      gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
-      gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0005|Systolic Blood Pressure: 0|local::at0015|101 - 199 mmHg|
-      gt0007|Level of consciousness: 3|local::at0027|Unresponsive|
-      gt0004|Heart Rate: 0|local::at0010|51 - 100 bpm|
-      gt0006|Temperature: 0|local::at0020|35 - 38.4 °C|
-      gt0009|Total score: 5
+  - id: confused patient, no RR set
+    input:
+      1:
+        gt0013|Pulse: 77,/min
+        gt0015|Systolic blood pressure: 120,mm[Hg]
+        gt0017|Temperature: 37,Cel
+        gt0019|AVPU Observation: local::at0008|Unresponsive|
+        gt0020|New Confusion: local::at0011|Present|
+        gt0022|Total urine output/24 hr: 2000,ml
+    expected_output:
+      1:
+        gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
+        gt0003|Respiratory Rate: 0|local::at0005|9 - 14 bpm|
+        gt0005|Systolic Blood Pressure: 0|local::at0015|101 - 199 mmHg|
+        gt0007|Level of consciousness: 3|local::at0027|Unresponsive|
+        gt0004|Heart Rate: 0|local::at0010|51 - 100 bpm|
+        gt0006|Temperature: 0|local::at0020|35 - 38.4 °C|
+        gt0009|Total score: 3
+  - id: Same with RR 22/min
+    input:
+      1:
+        gt0011|Respiration rate: 22,/min
+        gt0013|Pulse: 77,/min
+        gt0015|Systolic blood pressure: 120,mm[Hg]
+        gt0017|Temperature: 37,Cel
+        gt0019|AVPU Observation: local::at0008|Unresponsive|
+        gt0020|New Confusion: local::at0011|Present|
+        gt0022|Total urine output/24 hr: 2000,ml
+    expected_output:
+      1:
+        gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
+        gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0005|Systolic Blood Pressure: 0|local::at0015|101 - 199 mmHg|
+        gt0007|Level of consciousness: 3|local::at0027|Unresponsive|
+        gt0004|Heart Rate: 0|local::at0010|51 - 100 bpm|
+        gt0006|Temperature: 0|local::at0020|35 - 38.4 °C|
+        gt0009|Total score: 5
 
-- id: hypothermia and BP 90
-  input:
-    1:
-      gt0011|Respiration rate: 22,/min 
-      gt0013|Pulse: 77,/min 
-      gt0015|Systolic blood pressure: 90,mm[Hg] 
-      gt0017|Temperature: 34,°C 
-      gt0019|AVPU Observation: local::at0008|Unresponsive|
-      gt0020|New Confusion: local::at0011|Present| 
-      gt0022|Total urine output/24 hr: 2000,ml 
-  expected_output:
-    1:
-      gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
-      gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0005|Systolic Blood Pressure: 1|local::at0016|81 - 100 mmHg|
-      gt0007|Level of consciousness: 3|local::at0027|Unresponsive|
-      gt0004|Heart Rate: 0|local::at0010|51 - 100 bpm|
-      gt0006|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0009|Total score: 8
+  - id: hypothermia and BP 90
+    input:
+      1:
+        gt0011|Respiration rate: 22,/min
+        gt0013|Pulse: 77,/min
+        gt0015|Systolic blood pressure: 90,mm[Hg]
+        gt0017|Temperature: 34,Cel
+        gt0019|AVPU Observation: local::at0008|Unresponsive|
+        gt0020|New Confusion: local::at0011|Present|
+        gt0022|Total urine output/24 hr: 2000,ml
+    expected_output:
+      1:
+        gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
+        gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0005|Systolic Blood Pressure: 1|local::at0016|81 - 100 mmHg|
+        gt0007|Level of consciousness: 3|local::at0027|Unresponsive|
+        gt0004|Heart Rate: 0|local::at0010|51 - 100 bpm|
+        gt0006|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0009|Total score: 8
 
+  - id: HR not set, hypothermia, very low BP, consciousness pain
+    input:
+      1:
+        gt0011|Respiration rate: 22,/min
+        gt0015|Systolic blood pressure: 78,mm[Hg]
+        gt0017|Temperature: 34,Cel
+        gt0019|AVPU Observation: local::at0007|Pain|
+        gt0020|New Confusion: local::at0010|Absent|
+        gt0022|Total urine output/24 hr: 2000,ml
+    expected_output:
+      1:
+        gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
+        gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0005|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
+        gt0007|Level of consciousness: 2|local::at0026|Pain|
+        gt0004|Heart Rate: 0|local::at0010|51 - 100 bpm|
+        gt0006|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0009|Total score: 8
 
-- id: HR not set, hypothermia, very low BP, consciousness pain
-  input:
-    1:
-      gt0011|Respiration rate: 22,/min 
-      gt0015|Systolic blood pressure: 78,mm[Hg] 
-      gt0017|Temperature: 34,°C 
-      gt0019|AVPU Observation: local::at0007|Pain|
-      gt0020|New Confusion: local::at0010|Absent| 
-      gt0022|Total urine output/24 hr: 2000,ml 
-  expected_output:
-    1:
-      gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
-      gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0005|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
-      gt0007|Level of consciousness: 2|local::at0026|Pain|
-      gt0004|Heart Rate: 0|local::at0010|51 - 100 bpm|
-      gt0006|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0009|Total score: 8
+  - id: voice, HR below 50
+    input:
+      1:
+        gt0011|Respiration rate: 22,/min
+        gt0013|Pulse: 48,/min
+        gt0015|Systolic blood pressure: 78,mm[Hg]
+        gt0017|Temperature: 34,Cel
+        gt0019|AVPU Observation: local::at0006|Voice|
+        gt0020|New Confusion: local::at0010|Absent|
+        gt0022|Total urine output/24 hr: 2000,ml
+    expected_output:
+      1:
+        gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
+        gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0005|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
+        gt0007|Level of consciousness: 1|local::at0025|New confusion or Voice|
+        gt0004|Heart Rate: 1|local::at0011|41 - 50 or 101 - 110 bpm|
+        gt0006|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0009|Total score: 8
 
-- id: voice, HR below 50
-  input:
-    1:
-      gt0011|Respiration rate: 22,/min 
-      gt0013|Pulse: 48,/min 
-      gt0015|Systolic blood pressure: 78,mm[Hg] 
-      gt0017|Temperature: 34,°C 
-      gt0019|AVPU Observation: local::at0006|Voice|
-      gt0020|New Confusion: local::at0010|Absent| 
-      gt0022|Total urine output/24 hr: 2000,ml 
-  expected_output:
-    1:
-      gt0008|Urine output/24 hr: 0|local::at0029|Approx. 1 500 ml|
-      gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0005|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
-      gt0007|Level of consciousness: 1|local::at0025|New confusion or Voice|
-      gt0004|Heart Rate: 1|local::at0011|41 - 50 or 101 - 110 bpm|
-      gt0006|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0009|Total score: 8
+  - id: extreme low HR and BP, confusion not set
+    input:
+      1:
+        gt0011|Respiration rate: 22,/min
+        gt0013|Pulse: 37,/min
+        gt0015|Systolic blood pressure: 69,mm[Hg]
+        gt0017|Temperature: 39,Cel
+        gt0019|AVPU Observation: local::at0008|Unresponsive|
+        gt0022|Total urine output/24 hr: 800,ml
+    expected_output:
+      1:
+        gt0008|Urine output/24 hr: 1|local::at0030|Approx. 1 000 ml or > 2 500 ml|
+        gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0005|Systolic Blood Pressure: 3|local::at0018|≤ 70 mmHg|
+        gt0007|Level of consciousness: 3|local::at0027|Unresponsive|
+        gt0004|Heart Rate: 2|local::at0012|≤ 40 or 111 - 129 bpm|
+        gt0006|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
+        gt0009|Total score: 13
 
-
-- id: extreme low HR and BP, confusion not set
-  input:
-    1:
-      gt0011|Respiration rate: 22,/min 
-      gt0013|Pulse: 37,/min 
-      gt0015|Systolic blood pressure: 69,mm[Hg] 
-      gt0017|Temperature: 39,°C 
-      gt0019|AVPU Observation: local::at0008|Unresponsive| 
-      gt0022|Total urine output/24 hr: 800,ml 
-  expected_output:
-    1:
-      gt0008|Urine output/24 hr: 1|local::at0030|Approx. 1 000 ml or > 2 500 ml|
-      gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0005|Systolic Blood Pressure: 3|local::at0018|≤ 70 mmHg|
-      gt0007|Level of consciousness: 3|local::at0027|Unresponsive|
-      gt0004|Heart Rate: 2|local::at0012|≤ 40 or 111 - 129 bpm|
-      gt0006|Temperature: 2|local::at0022|< 35 or ≥ 38.5 °C|
-      gt0009|Total score: 13
-
-- id: Temperature not set, respiratory rate low, alert, high BP, high HR
-  input:
-    1:
-      gt0011|Respiration rate: 8,/min 
-      gt0013|Pulse: 110,/min 
-      gt0015|Systolic blood pressure: 210,mm[Hg] 
-      gt0019|AVPU Observation: local::at0005|Alert|
-      gt0020|New Confusion: local::at0010|Absent| 
-      gt0022|Total urine output/24 hr: 3000,ml 
-  expected_output:
-    1:
-      gt0008|Urine output/24 hr: 1|local::at0030|Approx. 1 000 ml or > 2 500 ml|
-      gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
-      gt0005|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
-      gt0007|Level of consciousness: 0|local::at0024|Alert|
-      gt0004|Heart Rate: 1|local::at0011|41 - 50 or 101 - 110 bpm|
-      gt0006|Temperature: 0|local::at0020|35 - 38.4 °C|
-      gt0009|Total score: 6
-
+  - id: Temperature not set, respiratory rate low, alert, high BP, high HR
+    input:
+      1:
+        gt0011|Respiration rate: 8,/min
+        gt0013|Pulse: 110,/min
+        gt0015|Systolic blood pressure: 210,mm[Hg]
+        gt0019|AVPU Observation: local::at0005|Alert|
+        gt0020|New Confusion: local::at0010|Absent|
+        gt0022|Total urine output/24 hr: 3000,ml
+    expected_output:
+      1:
+        gt0008|Urine output/24 hr: 1|local::at0030|Approx. 1 000 ml or > 2 500 ml|
+        gt0003|Respiratory Rate: 2|local::at0007|< 9 or 21 - 29 bpm|
+        gt0005|Systolic Blood Pressure: 2|local::at0017|71 - 80 or ≥ 200 mmHg|
+        gt0007|Level of consciousness: 0|local::at0024|Alert|
+        gt0004|Heart Rate: 1|local::at0011|41 - 50 or 101 - 110 bpm|
+        gt0006|Temperature: 0|local::at0020|35 - 38.4 °C|
+        gt0009|Total score: 6
