--- a/gdl2/Pediatric_Appendicitis_Score_guideline.v1.test.yml
+++ b/gdl2/Pediatric_Appendicitis_Score_guideline.v1.test.yml
@@ -1,129 +1,129 @@
 guidelines:
   1: Pediatric_Appendicitis_Score_guideline.v1
 test_cases:
-- id: PAS>7
-  input:
-    1:
-      gt0019|Age: 10,a
-      gt0021|White cell count, 10^9/l: 10000,10*9/l
-      gt0024|Temperature: 39,°C
-      gt0026|RLQ tenderness to cough, percussion, or hopping: 2|local::at0006|Yes|
-      gt0027|Anorexia: 1|local::at0009|Yes|
-      gt0028|Nausea or vomiting: 1|local::at0015|Yes|
-      gt0029|Tenderness over right iliac fossa: 2|local::at0018|Yes|
-      gt0030|Migration of pain to RLQ: 1|local::at0029|Yes|
-      gt0050|Neutrophilia (ANC>7,500): 1|local::at0026|Yes|
-  expected_output:
-    1:
-      gt0043|Interpretation: Appendicitis diagnosis likely.
-      gt0037|PAS: 10
-      gt0033|Leukocytosis: 1|local::at0021|Yes|
-      gt0032|Fever: 1|local::at0012|Yes|
-- id: PAS=7
-  input:
-    1:
-      gt0019|Age: 10,a
-      gt0021|White cell count, 10^9/l: 10000,10*9/l
-      gt0024|Temperature: 39,°C
-      gt0026|RLQ tenderness to cough, percussion, or hopping: 2|local::at0006|Yes|
-      gt0027|Anorexia: 1|local::at0009|Yes|
-      gt0028|Nausea or vomiting: 1|local::at0015|Yes|
-      gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
-      gt0030|Migration of pain to RLQ: 0|local::at0028|No|
-      gt0050|Neutrophilia (ANC>7,500): 1|local::at0026|Yes|
-  expected_output:
-    1:
-      gt0043|Interpretation: Appendicitis diagnosis likely.
-      gt0037|PAS: 7
-      gt0033|Leukocytosis: 1|local::at0021|Yes|
-      gt0032|Fever: 1|local::at0012|Yes|
-- id: PAS=6
-  input:
-    1:
-      gt0019|Age: 10,a
-      gt0021|White cell count, 10^9/l: 10000,10*9/l
-      gt0024|Temperature: 39,°C
-      gt0026|RLQ tenderness to cough, percussion, or hopping: 2|local::at0006|Yes|
-      gt0027|Anorexia: 1|local::at0009|Yes|
-      gt0028|Nausea or vomiting: 1|local::at0015|Yes|
-      gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
-      gt0030|Migration of pain to RLQ: 0|local::at0028|No|
-      gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
-  expected_output:
-    1:
-      gt0043|Interpretation: Score does not rule in or out appendicitis diagnosis – consider employing imaging and/or surgical consult.
-      gt0037|PAS: 6
-      gt0033|Leukocytosis: 1|local::at0021|Yes|
-      gt0032|Fever: 1|local::at0012|Yes|
-- id: PAS=4
-  input:
-    1:
-      gt0019|Age: 10,a
-      gt0021|White cell count, 10^9/l: 10000,10*9/l
-      gt0024|Temperature: 39,°C
-      gt0026|RLQ tenderness to cough, percussion, or hopping: 0|local::at0005|No|
-      gt0027|Anorexia: 1|local::at0009|Yes|
-      gt0028|Nausea or vomiting: 1|local::at0015|Yes|
-      gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
-      gt0030|Migration of pain to RLQ: 0|local::at0028|No|
-      gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
-  expected_output:
-    1:
-      gt0043|Interpretation: Score does not rule in or out appendicitis diagnosis – consider employing imaging and/or surgical consult.
-      gt0037|PAS: 4
-      gt0033|Leukocytosis: 1|local::at0021|Yes|
-      gt0032|Fever: 1|local::at0012|Yes|
-- id: PAS =3
-  input:
-    1:
-      gt0019|Age: 10,a
-      gt0021|White cell count, 10^9/l: 10000,10*9/l
-      gt0024|Temperature: 39,°C
-      gt0026|RLQ tenderness to cough, percussion, or hopping: 0|local::at0005|No|
-      gt0027|Anorexia: 0|local::at0008|No|
-      gt0028|Nausea or vomiting: 1|local::at0015|Yes|
-      gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
-      gt0030|Migration of pain to RLQ: 0|local::at0028|No|
-      gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
-  expected_output:
-    1:
-      gt0043|Interpretation: Appendicitis diagnosis unlikely
-      gt0037|PAS: 3
-      gt0033|Leukocytosis: 1|local::at0021|Yes|
-      gt0032|Fever: 1|local::at0012|Yes|
-- id: PAS<3
-  input:
-    1:
-      gt0019|Age: 10,a
-      gt0021|White cell count, 10^9/l: 10000,10*9/l
-      gt0024|Temperature: 39,°C
-      gt0026|RLQ tenderness to cough, percussion, or hopping: 0|local::at0005|No|
-      gt0027|Anorexia: 0|local::at0008|No|
-      gt0028|Nausea or vomiting: 0|local::at0014|No|
-      gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
-      gt0030|Migration of pain to RLQ: 0|local::at0028|No|
-      gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
-  expected_output:
-    1:
-      gt0043|Interpretation: Appendicitis diagnosis unlikely
-      gt0037|PAS: 2
-      gt0033|Leukocytosis: 1|local::at0021|Yes|
-      gt0032|Fever: 1|local::at0012|Yes|
-- id: PAS 0
-  input:
-    1:
-      gt0019|Age: 10,a
-      gt0021|White cell count, 10^9/l: 9000,10*9/l
-      gt0024|Temperature: 37,°C
-      gt0026|RLQ tenderness to cough, percussion, or hopping: 0|local::at0005|No|
-      gt0027|Anorexia: 0|local::at0008|No|
-      gt0028|Nausea or vomiting: 0|local::at0014|No|
-      gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
-      gt0030|Migration of pain to RLQ: 0|local::at0028|No|
-      gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
-  expected_output:
-    1:
-      gt0043|Interpretation: Appendicitis diagnosis unlikely
-      gt0037|PAS: 0
-      gt0033|Leukocytosis: 0|local::at0020|No|
-      gt0032|Fever: 0|local::at0011|No|
+  - id: PAS>7
+    input:
+      1:
+        gt0019|Age: 10,a
+        gt0021|White cell count, 10^9/l: 10000,10*9/l
+        gt0024|Temperature: 39,Cel
+        gt0026|RLQ tenderness to cough, percussion, or hopping: 2|local::at0006|Yes|
+        gt0027|Anorexia: 1|local::at0009|Yes|
+        gt0028|Nausea or vomiting: 1|local::at0015|Yes|
+        gt0029|Tenderness over right iliac fossa: 2|local::at0018|Yes|
+        gt0030|Migration of pain to RLQ: 1|local::at0029|Yes|
+        gt0050|Neutrophilia (ANC>7,500): 1|local::at0026|Yes|
+    expected_output:
+      1:
+        gt0043|Interpretation: Appendicitis diagnosis likely.
+        gt0037|PAS: 10
+        gt0033|Leukocytosis: 1|local::at0021|Yes|
+        gt0032|Fever: 1|local::at0012|Yes|
+  - id: PAS=7
+    input:
+      1:
+        gt0019|Age: 10,a
+        gt0021|White cell count, 10^9/l: 10000,10*9/l
+        gt0024|Temperature: 39,Cel
+        gt0026|RLQ tenderness to cough, percussion, or hopping: 2|local::at0006|Yes|
+        gt0027|Anorexia: 1|local::at0009|Yes|
+        gt0028|Nausea or vomiting: 1|local::at0015|Yes|
+        gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
+        gt0030|Migration of pain to RLQ: 0|local::at0028|No|
+        gt0050|Neutrophilia (ANC>7,500): 1|local::at0026|Yes|
+    expected_output:
+      1:
+        gt0043|Interpretation: Appendicitis diagnosis likely.
+        gt0037|PAS: 7
+        gt0033|Leukocytosis: 1|local::at0021|Yes|
+        gt0032|Fever: 1|local::at0012|Yes|
+  - id: PAS=6
+    input:
+      1:
+        gt0019|Age: 10,a
+        gt0021|White cell count, 10^9/l: 10000,10*9/l
+        gt0024|Temperature: 39,Cel
+        gt0026|RLQ tenderness to cough, percussion, or hopping: 2|local::at0006|Yes|
+        gt0027|Anorexia: 1|local::at0009|Yes|
+        gt0028|Nausea or vomiting: 1|local::at0015|Yes|
+        gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
+        gt0030|Migration of pain to RLQ: 0|local::at0028|No|
+        gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
+    expected_output:
+      1:
+        gt0043|Interpretation: Score does not rule in or out appendicitis diagnosis – consider employing imaging and/or surgical consult.
+        gt0037|PAS: 6
+        gt0033|Leukocytosis: 1|local::at0021|Yes|
+        gt0032|Fever: 1|local::at0012|Yes|
+  - id: PAS=4
+    input:
+      1:
+        gt0019|Age: 10,a
+        gt0021|White cell count, 10^9/l: 10000,10*9/l
+        gt0024|Temperature: 39,Cel
+        gt0026|RLQ tenderness to cough, percussion, or hopping: 0|local::at0005|No|
+        gt0027|Anorexia: 1|local::at0009|Yes|
+        gt0028|Nausea or vomiting: 1|local::at0015|Yes|
+        gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
+        gt0030|Migration of pain to RLQ: 0|local::at0028|No|
+        gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
+    expected_output:
+      1:
+        gt0043|Interpretation: Score does not rule in or out appendicitis diagnosis – consider employing imaging and/or surgical consult.
+        gt0037|PAS: 4
+        gt0033|Leukocytosis: 1|local::at0021|Yes|
+        gt0032|Fever: 1|local::at0012|Yes|
+  - id: PAS =3
+    input:
+      1:
+        gt0019|Age: 10,a
+        gt0021|White cell count, 10^9/l: 10000,10*9/l
+        gt0024|Temperature: 39,Cel
+        gt0026|RLQ tenderness to cough, percussion, or hopping: 0|local::at0005|No|
+        gt0027|Anorexia: 0|local::at0008|No|
+        gt0028|Nausea or vomiting: 1|local::at0015|Yes|
+        gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
+        gt0030|Migration of pain to RLQ: 0|local::at0028|No|
+        gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
+    expected_output:
+      1:
+        gt0043|Interpretation: Appendicitis diagnosis unlikely
+        gt0037|PAS: 3
+        gt0033|Leukocytosis: 1|local::at0021|Yes|
+        gt0032|Fever: 1|local::at0012|Yes|
+  - id: PAS<3
+    input:
+      1:
+        gt0019|Age: 10,a
+        gt0021|White cell count, 10^9/l: 10000,10*9/l
+        gt0024|Temperature: 39,Cel
+        gt0026|RLQ tenderness to cough, percussion, or hopping: 0|local::at0005|No|
+        gt0027|Anorexia: 0|local::at0008|No|
+        gt0028|Nausea or vomiting: 0|local::at0014|No|
+        gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
+        gt0030|Migration of pain to RLQ: 0|local::at0028|No|
+        gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
+    expected_output:
+      1:
+        gt0043|Interpretation: Appendicitis diagnosis unlikely
+        gt0037|PAS: 2
+        gt0033|Leukocytosis: 1|local::at0021|Yes|
+        gt0032|Fever: 1|local::at0012|Yes|
+  - id: PAS 0
+    input:
+      1:
+        gt0019|Age: 10,a
+        gt0021|White cell count, 10^9/l: 9000,10*9/l
+        gt0024|Temperature: 37,Cel
+        gt0026|RLQ tenderness to cough, percussion, or hopping: 0|local::at0005|No|
+        gt0027|Anorexia: 0|local::at0008|No|
+        gt0028|Nausea or vomiting: 0|local::at0014|No|
+        gt0029|Tenderness over right iliac fossa: 0|local::at0017|No|
+        gt0030|Migration of pain to RLQ: 0|local::at0028|No|
+        gt0050|Neutrophilia (ANC>7,500): 0|local::at0025|No|
+    expected_output:
+      1:
+        gt0043|Interpretation: Appendicitis diagnosis unlikely
+        gt0037|PAS: 0
+        gt0033|Leukocytosis: 0|local::at0020|No|
+        gt0032|Fever: 0|local::at0011|No|
