--- a/gdl2/Pediatrics_Sirs2.v1.test.yml
+++ b/gdl2/Pediatrics_Sirs2.v1.test.yml
@@ -2,246 +2,245 @@ guidelines:
   1: Pediatrics_Sirs2.v1
 current_datetime: 2019-08-12T09:18+02:00[Europe/Stockholm]
 test_cases:
-- id: case_1:Age 6d. 
-  input:
-    1:
-      gt0008|Birthdate: 2019-08-06T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 180,/min
-      gt0010|Temperature: 37,°C
-      gt0011|Systolic BP: 60,mm[Hg]
-      gt0012|Respiration rate: 50,/min
-      gt0013|White cell count: 34,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 6,d
-      gt0029|Temperature Corrected HR: 180,/min
-      gt0031|Temperature Corrected RR: 50,/min
-      gt0133|Pediatric mSIRS: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
-      'gt0125|Tachycardia for Age (fever-corrected) ': true
-      gt0122|Leukocytosis for Age: true
+  - id: case_1:Age 6d.
+    input:
+      1:
+        gt0008|Birthdate: 2019-08-06T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 180,/min
+        gt0010|Temperature: 37,Cel
+        gt0011|Systolic BP: 60,mm[Hg]
+        gt0012|Respiration rate: 50,/min
+        gt0013|White cell count: 34,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 6,d
+        gt0029|Temperature Corrected HR: 180,/min
+        gt0031|Temperature Corrected RR: 50,/min
+        gt0133|Pediatric mSIRS: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
+        "gt0125|Tachycardia for Age (fever-corrected) ": true
+        gt0122|Leukocytosis for Age: true
 
-- id: case_2:Age 6d
-  input:
-    1:
-      gt0008|Birthdate: 2019-08-06T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 100,/min
-      gt0010|Temperature: 36,°C
-      gt0011|Systolic BP: 50,mm[Hg]
-      gt0012|Respiration rate: 45,/min
-      gt0013|White cell count: 5,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 6,d
-      gt0029|Temperature Corrected HR: 110,/min
-      gt0031|Temperature Corrected RR: 52,/min
-      gt0132|Hypotension for Age: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
+  - id: case_2:Age 6d
+    input:
+      1:
+        gt0008|Birthdate: 2019-08-06T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 100,/min
+        gt0010|Temperature: 36,Cel
+        gt0011|Systolic BP: 50,mm[Hg]
+        gt0012|Respiration rate: 45,/min
+        gt0013|White cell count: 5,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 6,d
+        gt0029|Temperature Corrected HR: 110,/min
+        gt0031|Temperature Corrected RR: 52,/min
+        gt0132|Hypotension for Age: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
 
-- id: case_3:Age 7-30d
-  input:
-    1:
-      gt0008|Birthdate: 2019-07-30T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 190,/min
-      gt0010|Temperature: 37,°C
-      gt0011|Systolic BP: 70,mm[Hg]
-      gt0012|Respiration rate: 68,/min
-      gt0013|White cell count: 20,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 13,d
-      gt0029|Temperature Corrected HR: 190,/min
-      gt0031|Temperature Corrected RR: 68,/min
-      gt0133|Pediatric mSIRS: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
-      gt0122|Leukocytosis for Age: true
+  - id: case_3:Age 7-30d
+    input:
+      1:
+        gt0008|Birthdate: 2019-07-30T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 190,/min
+        gt0010|Temperature: 37,Cel
+        gt0011|Systolic BP: 70,mm[Hg]
+        gt0012|Respiration rate: 68,/min
+        gt0013|White cell count: 20,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 13,d
+        gt0029|Temperature Corrected HR: 190,/min
+        gt0031|Temperature Corrected RR: 68,/min
+        gt0133|Pediatric mSIRS: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
+        gt0122|Leukocytosis for Age: true
 
-- id: case_4:age 7-30d
-  input:
-    1:
-      gt0008|Birthdate: 2019-07-30T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 90,/min
-      gt0010|Temperature: 36,°C
-      gt0011|Systolic BP: 59,mm[Hg]
-      gt0012|Respiration rate: 60,/min
-      gt0013|White cell count: 5,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 13,d
-      gt0029|Temperature Corrected HR: 100,/min
-      gt0031|Temperature Corrected RR: 67,/min
-      gt0132|Hypotension for Age: true
-      gt0130|Bradycardia for Age: true
+  - id: case_4:age 7-30d
+    input:
+      1:
+        gt0008|Birthdate: 2019-07-30T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 90,/min
+        gt0010|Temperature: 36,Cel
+        gt0011|Systolic BP: 59,mm[Hg]
+        gt0012|Respiration rate: 60,/min
+        gt0013|White cell count: 5,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 13,d
+        gt0029|Temperature Corrected HR: 100,/min
+        gt0031|Temperature Corrected RR: 67,/min
+        gt0132|Hypotension for Age: true
+        gt0130|Bradycardia for Age: true
 
-- id: case_5:Age 30d-2y
-  input:
-    1:
-      gt0008|Birthdate: 2018-07-24T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 180,/min
-      gt0010|Temperature: 37,°C
-      gt0011|Systolic BP: 80,mm[Hg]
-      gt0012|Respiration rate: 58,/min
-      gt0013|White cell count: 18,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 384,d
-      gt0029|Temperature Corrected HR: 180,/min
-      gt0031|Temperature Corrected RR: 58,/min
-      gt0133|Pediatric mSIRS: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
-      'gt0125|Tachycardia for Age (fever-corrected) ': true
-      gt0122|Leukocytosis for Age: true
+  - id: case_5:Age 30d-2y
+    input:
+      1:
+        gt0008|Birthdate: 2018-07-24T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 180,/min
+        gt0010|Temperature: 37,Cel
+        gt0011|Systolic BP: 80,mm[Hg]
+        gt0012|Respiration rate: 58,/min
+        gt0013|White cell count: 18,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 384,d
+        gt0029|Temperature Corrected HR: 180,/min
+        gt0031|Temperature Corrected RR: 58,/min
+        gt0133|Pediatric mSIRS: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
+        "gt0125|Tachycardia for Age (fever-corrected) ": true
+        gt0122|Leukocytosis for Age: true
 
-- id: case_6:Age 30d-2y
-  input:
-    1:
-      gt0008|Birthdate: 2018-07-24T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 100,/min
-      gt0010|Temperature: 36,°C
-      gt0011|Systolic BP: 60,mm[Hg]
-      gt0012|Respiration rate: 68,/min
-      gt0013|White cell count: 5,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 384,d
-      gt0029|Temperature Corrected HR: 110,/min
-      gt0031|Temperature Corrected RR: 75,/min
-      gt0132|Hypotension for Age: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
+  - id: case_6:Age 30d-2y
+    input:
+      1:
+        gt0008|Birthdate: 2018-07-24T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 100,/min
+        gt0010|Temperature: 36,Cel
+        gt0011|Systolic BP: 60,mm[Hg]
+        gt0012|Respiration rate: 68,/min
+        gt0013|White cell count: 5,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 384,d
+        gt0029|Temperature Corrected HR: 110,/min
+        gt0031|Temperature Corrected RR: 75,/min
+        gt0132|Hypotension for Age: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
 
-- id: case_7:Age 2-5y
-  input:
-    1:
-      gt0008|Birthdate: 2015-07-13T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 160,/min
-      gt0010|Temperature: 37,°C
-      gt0011|Systolic BP: 90,mm[Hg]
-      gt0012|Respiration rate: 44,/min
-      gt0013|White cell count: 16,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 1491,d
-      gt0029|Temperature Corrected HR: 160,/min
-      gt0031|Temperature Corrected RR: 44,/min
-      gt0133|Pediatric mSIRS: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
-      'gt0125|Tachycardia for Age (fever-corrected) ': true
-      gt0122|Leukocytosis for Age: true
+  - id: case_7:Age 2-5y
+    input:
+      1:
+        gt0008|Birthdate: 2015-07-13T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 160,/min
+        gt0010|Temperature: 37,Cel
+        gt0011|Systolic BP: 90,mm[Hg]
+        gt0012|Respiration rate: 44,/min
+        gt0013|White cell count: 16,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 1491,d
+        gt0029|Temperature Corrected HR: 160,/min
+        gt0031|Temperature Corrected RR: 44,/min
+        gt0133|Pediatric mSIRS: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
+        "gt0125|Tachycardia for Age (fever-corrected) ": true
+        gt0122|Leukocytosis for Age: true
 
-- id: case_8:Age 2-5y
-  input:
-    1:
-      gt0008|Birthdate: 2015-07-13T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 160,/min
-      gt0010|Temperature: 36,°C
-      gt0011|Systolic BP: 60,mm[Hg]
-      gt0012|Respiration rate: 58,/min
-      gt0013|White cell count: 4,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 1491,d
-      gt0029|Temperature Corrected HR: 170,/min
-      gt0031|Temperature Corrected RR: 63,/min
-      gt0133|Pediatric mSIRS: true
-      gt0123|Leukopenia: true
-      gt0132|Hypotension for Age: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
-      'gt0125|Tachycardia for Age (fever-corrected) ': true
+  - id: case_8:Age 2-5y
+    input:
+      1:
+        gt0008|Birthdate: 2015-07-13T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 160,/min
+        gt0010|Temperature: 36,Cel
+        gt0011|Systolic BP: 60,mm[Hg]
+        gt0012|Respiration rate: 58,/min
+        gt0013|White cell count: 4,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 1491,d
+        gt0029|Temperature Corrected HR: 170,/min
+        gt0031|Temperature Corrected RR: 63,/min
+        gt0133|Pediatric mSIRS: true
+        gt0123|Leukopenia: true
+        gt0132|Hypotension for Age: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
+        "gt0125|Tachycardia for Age (fever-corrected) ": true
 
-- id: case_9:Age 5-12y
-  input:
-    1:
-      gt0008|Birthdate: 2009-07-20T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 140,/min
-      gt0010|Temperature: 37,°C
-      gt0011|Systolic BP: 99,mm[Hg]
-      gt0012|Respiration rate: 38,/min
-      gt0013|White cell count: 14,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 3675,d
-      gt0029|Temperature Corrected HR: 140,/min
-      gt0031|Temperature Corrected RR: 38,/min
-      gt0133|Pediatric mSIRS: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
-      'gt0125|Tachycardia for Age (fever-corrected) ': true
-      gt0122|Leukocytosis for Age: true
+  - id: case_9:Age 5-12y
+    input:
+      1:
+        gt0008|Birthdate: 2009-07-20T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 140,/min
+        gt0010|Temperature: 37,Cel
+        gt0011|Systolic BP: 99,mm[Hg]
+        gt0012|Respiration rate: 38,/min
+        gt0013|White cell count: 14,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 3675,d
+        gt0029|Temperature Corrected HR: 140,/min
+        gt0031|Temperature Corrected RR: 38,/min
+        gt0133|Pediatric mSIRS: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
+        "gt0125|Tachycardia for Age (fever-corrected) ": true
+        gt0122|Leukocytosis for Age: true
 
-- id: case_10:Age 5-12y
-  input:
-    1:
-      gt0008|Birthdate: 2009-07-20T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 160,/min
-      gt0010|Temperature: 36,°C
-      gt0011|Systolic BP: 80,mm[Hg]
-      gt0012|Respiration rate: 44,/min
-      gt0013|White cell count: 4,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 3675,d
-      gt0029|Temperature Corrected HR: 170,/min
-      gt0031|Temperature Corrected RR: 49,/min
-      gt0133|Pediatric mSIRS: true
-      gt0123|Leukopenia: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
-      'gt0125|Tachycardia for Age (fever-corrected) ': true
-      gt0137|Hypotension: true
+  - id: case_10:Age 5-12y
+    input:
+      1:
+        gt0008|Birthdate: 2009-07-20T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 160,/min
+        gt0010|Temperature: 36,Cel
+        gt0011|Systolic BP: 80,mm[Hg]
+        gt0012|Respiration rate: 44,/min
+        gt0013|White cell count: 4,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 3675,d
+        gt0029|Temperature Corrected HR: 170,/min
+        gt0031|Temperature Corrected RR: 49,/min
+        gt0133|Pediatric mSIRS: true
+        gt0123|Leukopenia: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
+        "gt0125|Tachycardia for Age (fever-corrected) ": true
+        gt0137|Hypotension: true
 
-- id: case_11:Age 5-12y
-  input:
-    1:
-      gt0008|Birthdate: 2002-07-22T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 130,/min
-      gt0010|Temperature: 37,°C
-      gt0011|Systolic BP: 100,mm[Hg]
-      gt0012|Respiration rate: 35,/min
-      gt0013|White cell count: 11,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 6230,d
-      gt0029|Temperature Corrected HR: 130,/min
-      gt0031|Temperature Corrected RR: 35,/min
-      gt0133|Pediatric mSIRS: true
-      'gt0128|Tachypnea for Age (fever corrected) ': true
-      'gt0125|Tachycardia for Age (fever-corrected) ': true
-      gt0122|Leukocytosis for Age: true
+  - id: case_11:Age 5-12y
+    input:
+      1:
+        gt0008|Birthdate: 2002-07-22T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 130,/min
+        gt0010|Temperature: 37,Cel
+        gt0011|Systolic BP: 100,mm[Hg]
+        gt0012|Respiration rate: 35,/min
+        gt0013|White cell count: 11,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 6230,d
+        gt0029|Temperature Corrected HR: 130,/min
+        gt0031|Temperature Corrected RR: 35,/min
+        gt0133|Pediatric mSIRS: true
+        "gt0128|Tachypnea for Age (fever corrected) ": true
+        "gt0125|Tachycardia for Age (fever-corrected) ": true
+        gt0122|Leukocytosis for Age: true
 
-- id: case_12:Adult
-  input:
-    1:
-      gt0008|Birthdate: 1990-07-03T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 90,/min
-      gt0010|Temperature: 37,°C
-      gt0011|Systolic BP: 100,mm[Hg]
-      gt0012|Respiration rate: 20,/min
-      gt0013|White cell count: 13,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 10632,d
-      gt0029|Temperature Corrected HR: 90,/min
-      gt0031|Temperature Corrected RR: 20,/min
-      gt0134|Adult SIRS: true
-      gt0124|Relative Tachycardia (>90): true
-      gt0121|Leukocytosis: true
-      gt0127|Tachypnea: true
-      gt0149|Shock Index: 0.90
+  - id: case_12:Adult
+    input:
+      1:
+        gt0008|Birthdate: 1990-07-03T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 90,/min
+        gt0010|Temperature: 37,Cel
+        gt0011|Systolic BP: 100,mm[Hg]
+        gt0012|Respiration rate: 20,/min
+        gt0013|White cell count: 13,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 10632,d
+        gt0029|Temperature Corrected HR: 90,/min
+        gt0031|Temperature Corrected RR: 20,/min
+        gt0134|Adult SIRS: true
+        gt0124|Relative Tachycardia (>90): true
+        gt0121|Leukocytosis: true
+        gt0127|Tachypnea: true
+        gt0149|Shock Index: 0.90
 
-- id: case_13:Adult 
-  input:
-    1:
-      gt0008|Birthdate: 1990-07-03T09:18+02:00[Europe/Stockholm]
-      gt0009|Heart rate: 70,/min
-      gt0010|Temperature: 36,°C
-      gt0011|Systolic BP: 80,mm[Hg]
-      gt0012|Respiration rate: 44,/min
-      gt0013|White cell count: 4,10*9/l
-  expected_output:
-    1:
-      gt0018|Age in Days: 10632,d
-      gt0029|Temperature Corrected HR: 70,/min
-      gt0031|Temperature Corrected RR: 44,/min
-      gt0135|2 of 3 qSOFA: true
-      gt0137|Hypotension: true
-      gt0127|Tachypnea: true
-      gt0149|Shock Index: 0.88
-
+  - id: case_13:Adult
+    input:
+      1:
+        gt0008|Birthdate: 1990-07-03T09:18+02:00[Europe/Stockholm]
+        gt0009|Heart rate: 70,/min
+        gt0010|Temperature: 36,Cel
+        gt0011|Systolic BP: 80,mm[Hg]
+        gt0012|Respiration rate: 44,/min
+        gt0013|White cell count: 4,10*9/l
+    expected_output:
+      1:
+        gt0018|Age in Days: 10632,d
+        gt0029|Temperature Corrected HR: 70,/min
+        gt0031|Temperature Corrected RR: 44,/min
+        gt0135|2 of 3 qSOFA: true
+        gt0137|Hypotension: true
+        gt0127|Tachypnea: true
+        gt0149|Shock Index: 0.88
