Add evaluation archetype

--- a/gdl2/SCORAD_guideline.v1.test.yml
+++ b/gdl2/SCORAD_guideline.v1.test.yml
@@ -24,7 +24,7 @@ test_cases:
       gt0043|Comment: SCORing Atopic Dermatitis results range between 0 and 103, where the higher the score, the higher the severity of the disease.
       gt0040|Intensity score: 18
       gt0041|Subjective symptoms score: 20
-      gt0042|Total score: 85.8,1
+      gt0042|SCORAD: 85.8,1
 - id: max score
   input:
     1:
@@ -48,7 +48,7 @@ test_cases:
       gt0043|Comment: SCORing Atopic Dermatitis results range between 0 and 103, where the higher the score, the higher the severity of the disease.
       gt0040|Intensity score: 18
       gt0041|Subjective symptoms score: 20
-      gt0042|Total score: 103.0,1
+      gt0042|SCORAD: 103.0,1
 - id: Min score
   input:
     1:
@@ -72,4 +72,4 @@ test_cases:
       gt0043|Comment: SCORing Atopic Dermatitis results range between 0 and 103, where the higher the score, the higher the severity of the disease.
       gt0040|Intensity score: 0
       gt0041|Subjective symptoms score: 0
-      gt0042|Total score: 0.0,1
+      gt0042|SCORAD: 0.0,1
