--- a/gdl2/Open_fracture_Gustilo_classification.v1.test.yml
+++ b/gdl2/Open_fracture_Gustilo_classification.v1.test.yml
@@ -7,7 +7,7 @@ test_cases:
       gt0004|Grade I: false
       gt0005|Grade II: false
       gt0006|Grade III: false
-      gt0007|Grade IIII injury subdivisions: false
+      gt0007|Grade III injury subdivisions: false
   expected_output:
     1: {}
 
@@ -20,7 +20,7 @@ test_cases:
       gt0007|Grade IIII injury subdivisions: false
   expected_output:
     1:
-      gt0015|Grade I open fractures: Low energy mechanism. Clean wound less than 1 cm in length. Minimal contamination, `inside-out injuries`. Average time to union of around 21 - 28 weeks. Antibiotic treatment indication; 1st generation cephalosporin.
+      gt0015|Grade I open fractures: Low energy mechanism. Clean wound less than 1 cm in length. Minimal contamination, inside-out injuries. Average time to union of around 21 - 28 weeks. Antibiotic treatment recommendation includes 1st generation cephalosporin.
 
 - id: Grade II
   input:
@@ -31,7 +31,7 @@ test_cases:
       gt0007|Grade IIII injury subdivisions: false
   expected_output:
     1:
-      gt0016|Grade II: Moderate energy mechanism and soft tissue damage. Between 1 cm and 10 cm. Moderate contamination risk.
+      gt0016|Grade II: Moderate energy mechanism and soft tissue damage. Between 1 cm and 10 cm. Moderate contamination risk. Antibiotic treatment recommendation includes 1st generation cephalosporin.
 
 - id: Grade III
   input:
@@ -42,9 +42,9 @@ test_cases:
       gt0007|Grade IIII injury subdivisions: false
   expected_output:
     1:
-      gt0017|Grade III: High energy mechanism, extensive soft tissue damage. Over 10 cm in length. Vascular repair and/or have been open for 8 hours prior to treatment. Very high degree of contamination.
+      gt0017|Grade III: High energy mechanism, extensive soft tissue damage. Over 10 cm in length. Vascular repair and/or have been open for 8 hours prior to treatment. Very high degree of contamination. Antibiotic treatment recommendation includes 1st generation cephalosporin, aminoglycoside treatment (usually gentamicine) and preventive PCN in high risk of contamination injuries such as farm ones.
 
-- id: Grade IIII
+- id: Grade III subdivisions
   input:
     1:
       gt0004|Grade I: false
@@ -53,8 +53,7 @@ test_cases:
       gt0007|Grade IIII injury subdivisions: true
   expected_output:
     1:
-      gt0018|Grade III injury subdivisions: IIIA adequate periosteal coverage. IIIB inadequate periosteal cover with bone damage and soft tissue damage. IIIC associates with arterial injury and extensive soft tissue laceration.
-
+      gt0018|Grade III injury subdivisions: IIIA adequate periosteal coverage of the fractured bone although extensive soft tissue damage is present. IIIB inadequate periosteal cover with bone damage and soft tissue damage. Also associated with massive contamination. Requires soft tissue flap repairing of the injury. IIIC associates with arterial injury and extensive soft tissue laceration and often requires repairing vascular and skeletal fixation procedures.
 - id: Multiple Grade 
   input:
     1:
@@ -64,6 +63,6 @@ test_cases:
       gt0007|Grade IIII injury subdivisions: true
   expected_output:
     1:
-      gt0016|Grade II: Moderate energy mechanism and soft tissue damage. Between 1 cm and 10 cm. Moderate contamination risk.
-      gt0015|Grade I open fractures: Low energy mechanism. Clean wound less than 1 cm in length. Minimal contamination, `inside-out injuries`. Average time to union of around 21 - 28 weeks. Antibiotic treatment indication; 1st generation cephalosporin.
-      gt0018|Grade III injury subdivisions: IIIA adequate periosteal coverage. IIIB inadequate periosteal cover with bone damage and soft tissue damage. IIIC associates with arterial injury and extensive soft tissue laceration.
+      gt0016|Grade II: Moderate energy mechanism and soft tissue damage. Between 1 cm and 10 cm. Moderate contamination risk. Antibiotic treatment recommendation includes 1st generation cephalosporin.
+      gt0015|Grade I open fractures: Low energy mechanism. Clean wound less than 1 cm in length. Minimal contamination, inside-out injuries. Average time to union of around 21 - 28 weeks. Antibiotic treatment recommendation includes 1st generation cephalosporin.
+      gt0018|Grade III injury subdivisions: IIIA adequate periosteal coverage of the fractured bone although extensive soft tissue damage is present. IIIB inadequate periosteal cover with bone damage and soft tissue damage. Also associated with massive contamination. Requires soft tissue flap repairing of the injury. IIIC associates with arterial injury and extensive soft tissue laceration and often requires repairing vascular and skeletal fixation procedures.
