--- a/gdl2/Pediatric_SIRS_Sepsis_Septic_Shock_Criteria_guideline.v1.test.yml
+++ b/gdl2/Pediatric_SIRS_Sepsis_Septic_Shock_Criteria_guideline.v1.test.yml
@@ -4,7 +4,7 @@ test_cases:
 - id: Not meet SIRS criteria case 1
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
       gt0004|Tachycardia or bradycardia (if <1 year): 0|local::at0009|No|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 0|local::at0012|No|
       gt0006|Abnormal leukocyte count or >10% bands: 0|local::at0015|No|
@@ -16,7 +16,7 @@ test_cases:
 - id: Not meet SIRS criteria case 2
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
       gt0004|Tachycardia or bradycardia (if <1 year): 1|local::at0010|Yes|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 1|local::at0013|Yes|
       gt0006|Abnormal leukocyte count or >10% bands: 0|local::at0015|No|
@@ -25,10 +25,10 @@ test_cases:
     1:
       gt0014|Comment: Check for other causes of shock.
       gt0011|Diagnosis: This patient does not meet SIRS criteria.
-- id: patient meets SIRS criteria case 1
+- id: Patient meets SIRS criteria case 1
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 1|local::at0006|Yes|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 1|local::at0006|Yes|
       gt0004|Tachycardia or bradycardia (if <1 year): 1|local::at0010|Yes|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 0|local::at0012|No|
       gt0006|Abnormal leukocyte count or >10% bands: 0|local::at0015|No|
@@ -36,10 +36,10 @@ test_cases:
   expected_output:
     1:
       gt0011|Diagnosis: This patient meets SIRS criteria.
-- id: patient meets SIRS criteria case 2
+- id: Patient meets SIRS criteria case 2
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
       gt0004|Tachycardia or bradycardia (if <1 year): 0|local::at0009|No|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 1|local::at0013|Yes|
       gt0006|Abnormal leukocyte count or >10% bands: 1|local::at0016|Yes|
@@ -47,10 +47,10 @@ test_cases:
   expected_output:
     1:
       gt0011|Diagnosis: This patient meets SIRS criteria.
-- id: sepsis criteria
+- id: Sepsis criteria
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
       gt0004|Tachycardia or bradycardia (if <1 year): 0|local::at0009|No|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 1|local::at0013|Yes|
       gt0006|Abnormal leukocyte count or >10% bands: 1|local::at0016|Yes|
@@ -61,10 +61,10 @@ test_cases:
       gt0013|Management: Screen for Severe Sepsis and Septic Shock physical exam findings. If present, initiate ACCM/PALS Septic Shock Algorithm.
       gt0014|Comment: Consider IV fluid resuscitation, cultures, and broad-spectrum antibiotics.
       gt0011|Diagnosis: This patient meets sepsis criteria.
-- id: severe sepsis criteria
+- id: Severe sepsis criteria
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
       gt0004|Tachycardia or bradycardia (if <1 year): 0|local::at0009|No|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 1|local::at0013|Yes|
       gt0006|Abnormal leukocyte count or >10% bands: 1|local::at0016|Yes|
@@ -74,10 +74,10 @@ test_cases:
   expected_output:
     1:
       gt0011|Diagnosis: This patient meets severe sepsis criteria.
-- id: septic shock criteria
+- id: Septic shock criteria
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
       gt0004|Tachycardia or bradycardia (if <1 year): 0|local::at0009|No|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 1|local::at0013|Yes|
       gt0006|Abnormal leukocyte count or >10% bands: 1|local::at0016|Yes|
@@ -88,10 +88,10 @@ test_cases:
   expected_output:
     1:
       gt0011|Diagnosis: This patient meets septic shock criteria.
-- id: meets severe sepsis criteria+ cardiovascular dysfunction
+- id: Meets severe sepsis criteria+ cardiovascular dysfunction
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
       gt0004|Tachycardia or bradycardia (if <1 year): 0|local::at0009|No|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 1|local::at0013|Yes|
       gt0006|Abnormal leukocyte count or >10% bands: 1|local::at0016|Yes|
@@ -104,10 +104,10 @@ test_cases:
       gt0013|Management: Screen for Severe Sepsis and Septic Shock physical exam findings. If present, initiate ACCM/PALS Septic Shock Algorithm.
       gt0014|Comment: Consider IV fluid resuscitation, cultures, and broad-spectrum antibiotics.
       gt0011|Diagnosis: This patient meets severe sepsis criteria.
-- id: septic shock criteria+Cardiovascular dysfunction despite adequate fluid resuscitation
+- id: Septic shock criteria+Cardiovascular dysfunction despite adequate fluid resuscitation
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 0|local::at0007|No|
       gt0004|Tachycardia or bradycardia (if <1 year): 0|local::at0009|No|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 1|local::at0013|Yes|
       gt0006|Abnormal leukocyte count or >10% bands: 1|local::at0016|Yes|
@@ -120,10 +120,10 @@ test_cases:
       gt0013|Management: Screen for Severe Sepsis and Septic Shock physical exam findings. If present, initiate ACCM/PALS Septic Shock Algorithm.
       gt0014|Comment: Consider IV fluid resuscitation, cultures, and broad-spectrum antibiotics.
       gt0011|Diagnosis: This patient meets septic shock criteria.
-- id: septic shock criteria if All criteria yes
+- id: Septic shock criteria if All criteria yes
   input:
     1:
-      gt0003|Temp >38.5°C (101.3°F) or < 36°C (96.8°F): 1|local::at0006|Yes|
+      gt0003|Temperature >38.5°C (101.3°F) or < 36°C (96.8°F): 1|local::at0006|Yes|
       gt0004|Tachycardia or bradycardia (if <1 year): 1|local::at0010|Yes|
       gt0005|Tachypnea or mechanical ventilation (related to an acute process): 1|local::at0013|Yes|
       gt0006|Abnormal leukocyte count or >10% bands: 1|local::at0016|Yes|
