Sickle Cell RBC Exchange Volume

--- a/gdl2/Sickle_Cell_RBC_Exchange_Volume_guideline.v1.test.yml
+++ b/gdl2/Sickle_Cell_RBC_Exchange_Volume_guideline.v1.test.yml
@@ -1,67 +1,99 @@
 guidelines:
   1: Sickle_Cell_RBC_Exchange_Volume_guideline.v1
 test_cases:
-- id: Male, in, lb
+- id: Male, weight kg, height cm
   input:
     1:
-      gt0003|Patient sex: local::at0005|Male|
-      gt0005|Patient height: 80,in
-      gt0007|Patient weight: 160,lb
-      gt0026|Patient hematocrit: 20,%
-      gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 1,%
-      gt0029|Hematocrit of transfused RBCs: 55,%
+      gt0003|Gender: local::at0005|Male|
+      gt0005|Height/Length: 160,cm
+      gt0007|Weight: 70,kg
+      gt0009|Patient hematocrit: 40,%
+      gt0033|Patient's initial HgbS: 12,%
+      gt0035|Goal HgbS: 10,%
+      gt0037|Hematocrit of transfused RBCs: 30,%
   expected_output:
     1:
-      gt0024|RBC replacement volume: 6557.90,ml
-      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 19,1
-      gt0031|Total blood volume: 6.019,l
-      gt0034|RBC volume: 1204,ml
-- id: Female, in, lb
+      gt0015|RBC replacement volume: 1059.90,ml
+      gt0016|Approximate number of units: 3,1
+      gt0018|RBC volume: 1744.00,ml
+      gt0019|Total blood volume: 4.36,ml
+- id: Female, weight kg, height cm
   input:
     1:
-      gt0003|Patient sex: local::at0006|Female|
-      gt0005|Patient height: 80,in
-      gt0007|Patient weight: 160,lb
-      gt0026|Patient hematocrit: 20,%
-      gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 1,%
-      gt0029|Hematocrit of transfused RBCs: 55,%
+      gt0003|Gender: local::at0006|Female|
+      gt0005|Height/Length: 160,cm
+      gt0007|Weight: 70,kg
+      gt0009|Patient hematocrit: 40,%
+      gt0033|Patient's initial HgbS: 12,%
+      gt0035|Goal HgbS: 10,%
+      gt0037|Hematocrit of transfused RBCs: 30,%
   expected_output:
     1:
-      gt0024|RBC replacement volume: 6067.70,ml
-      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 17,1
-      gt0031|Total blood volume: 5.572,l
-      gt0034|RBC volume: 1114,ml
-- id: Feamle, kh, cm
+      gt0015|RBC replacement volume: 962.70,ml
+      gt0016|Approximate number of units: 3,1
+      gt0018|RBC volume: 1584.00,ml
+      gt0019|Total blood volume: 3.96,ml
+- id: Male, weight  lb, height  inch
   input:
     1:
-      gt0003|Patient sex: local::at0006|Female|
-      gt0005|Patient height: 200,cm
-      gt0007|Patient weight: 80,kg
-      gt0026|Patient hematocrit: 20,%
-      gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 1,%
-      gt0029|Hematocrit of transfused RBCs: 55,%
+      gt0003|Gender: local::at0005|Male|
+      gt0005|Height/Length: 60,in
+      gt0007|Weight: 150,lb
+      gt0009|Patient hematocrit: 40,%
+      gt0033|Patient's initial HgbS: 12,%
+      gt0035|Goal HgbS: 10,%
+      gt0037|Hematocrit of transfused RBCs: 30,%
   expected_output:
     1:
-      gt0024|RBC replacement volume: 6187.50,ml
-      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 18,1
-      gt0031|Total blood volume: 5.678,l
-      gt0034|RBC volume: 1136,ml
-- id: Male, kg, cm
+      gt0015|RBC replacement volume: 994.30,ml
+      gt0016|Approximate number of units: 3,1
+      gt0018|RBC volume: 1636.00,ml
+      gt0019|Total blood volume: 4.09,ml
+- id: Female, weight lb, height inch
   input:
     1:
-      gt0003|Patient sex: local::at0005|Male|
-      gt0005|Patient height: 200,cm
-      gt0007|Patient weight: 80,kg
-      gt0026|Patient hematocrit: 20,%
-      gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 1,%
-      gt0029|Hematocrit of transfused RBCs: 55,%
+      gt0003|Gender: local::at0006|Female|
+      gt0005|Height/Length: 60,in
+      gt0007|Weight: 150,lb
+      gt0009|Patient hematocrit: 40,%
+      gt0033|Patient's initial HgbS: 12,%
+      gt0035|Goal HgbS: 10,%
+      gt0037|Hematocrit of transfused RBCs: 30,%
   expected_output:
     1:
-      gt0024|RBC replacement volume: 6661.40,ml
-      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 19,1
-      gt0031|Total blood volume: 6.114,l
-      gt0034|RBC volume: 1223,ml
+      gt0015|RBC replacement volume: 897.00,ml
+      gt0016|Approximate number of units: 3,1
+      gt0018|RBC volume: 1476.00,ml
+      gt0019|Total blood volume: 3.69,ml
+- id: Female, weight kg, height cm, number of units 2
+  input:
+    1:
+      gt0003|Gender: local::at0006|Female|
+      gt0005|Height/Length: 100,cm
+      gt0007|Weight: 50,kg
+      gt0009|Patient hematocrit: 20,%
+      gt0033|Patient's initial HgbS: 20,%
+      gt0035|Goal HgbS: 10,%
+      gt0037|Hematocrit of transfused RBCs: 55,%
+  expected_output:
+    1:
+      gt0015|RBC replacement volume: 552.00,ml
+      gt0016|Approximate number of units: 2,1
+      gt0018|RBC volume: 438.00,ml
+      gt0019|Total blood volume: 2.19,ml
+- id: Male, weight kg, height cm, number of units 2
+  input:
+    1:
+      gt0003|Gender: local::at0005|Male|
+      gt0005|Height/Length: 100,cm
+      gt0007|Weight: 50,kg
+      gt0009|Patient hematocrit: 20,%
+      gt0033|Patient's initial HgbS: 20,%
+      gt0035|Goal HgbS: 10,%
+      gt0037|Hematocrit of transfused RBCs: 55,%
+  expected_output:
+    1:
+      gt0015|RBC replacement volume: 650.30,ml
+      gt0016|Approximate number of units: 2,1
+      gt0018|RBC volume: 516.00,ml
+      gt0019|Total blood volume: 2.58,ml
